--- a/_posts/http/2021-05-20-http-07.md
+++ b/_posts/http/2021-05-20-http-07.md
@@ -40,7 +40,7 @@ last_modified_at: '2021-05-20 22:00:00 +0800'
 
 ### message body - RFC2616(과거)
 
-![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/372596a0-c5ab-44d3-8b8c-1b4530dcfa86/Untitled.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/372596a0-c5ab-44d3-8b8c-1b4530dcfa86/Untitled.png)
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-03.png){: .align-center}{: width="100%" height="100%"}
 
 - 메시지 본문(message body)은 엔티티 본문(entity body)을 전달하는 데 사용된다
 - **엔티티 본문**은 요청이나 응답에서 전달하는 실제 데이터이다.
@@ -55,7 +55,7 @@ last_modified_at: '2021-05-20 22:00:00 +0800'
 
 ### message body - RFC7230(최신)
 
-![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/37e19e56-03b2-4609-a813-14e194aab27a/Untitled.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/37e19e56-03b2-4609-a813-14e194aab27a/Untitled.png)
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-04.png){: .align-center}{: width="100%" height="100%"}
 
 - 메시지 본문(message body)을 통해 표현 데이터를 전달한다.
 - 메시지 본문 = 페이로드(payload)
@@ -66,7 +66,7 @@ last_modified_at: '2021-05-20 22:00:00 +0800'
 
 # (2) 표현
 
-![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/629422d1-e21b-4808-b9b3-a37ec0e0d491/Untitled.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/629422d1-e21b-4808-b9b3-a37ec0e0d491/Untitled.png)
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-05.png){: .align-center}{: width="100%" height="100%"}
 
 - Content-Type: 표현 데이터의 형식
     - 예) HTML, JSON, XML
@@ -79,7 +79,7 @@ last_modified_at: '2021-05-20 22:00:00 +0800'
 
 ### 표현 데이터의 형식 설명
 
-![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/4fed894e-5230-49b7-8d0b-046e76cec7bb/Untitled.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/4fed894e-5230-49b7-8d0b-046e76cec7bb/Untitled.png)
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-06.png){: .align-center}{: width="100%" height="100%"}
 
 - content body에 들어가는 내용이 무엇인지 알려준다.
 - 미디어 타입, 문자 인코딩
@@ -92,7 +92,7 @@ last_modified_at: '2021-05-20 22:00:00 +0800'
 
 ### 표현 데이터 인코딩
 
-![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/3933a898-8a9b-4cf1-aa3a-9c4c99976540/Untitled.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/3933a898-8a9b-4cf1-aa3a-9c4c99976540/Untitled.png)
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-07.png){: .align-center}{: width="100%" height="100%"}
 
 - 표현 데이터를 압축하기 위해 사용한다.
 - 데이터를 전달하는 곳에서압축 후 인코딩 헤더를 추가한다.
@@ -106,9 +106,9 @@ last_modified_at: '2021-05-20 22:00:00 +0800'
 
 ### 표현 데이터의 자연 언어
 
-![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/a6d8a929-12a0-4c26-a1f6-db6c9097671b/Untitled.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/a6d8a929-12a0-4c26-a1f6-db6c9097671b/Untitled.png)
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-07.png){: .align-center}{: width="100%" height="100%"}
 
-![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/c11a222e-e8f1-4554-994b-0e6859f65452/Untitled.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/c11a222e-e8f1-4554-994b-0e6859f65452/Untitled.png)
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-08.png){: .align-center}{: width="100%" height="100%"}
 
 - 표현 데이터의 자연 언어를 표현한다.
 - 예)
@@ -121,7 +121,7 @@ last_modified_at: '2021-05-20 22:00:00 +0800'
 
 ### 표현 데이터의 길이
 
-![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/7c327973-e517-4294-a52f-1a6358efa9c8/Untitled.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/7c327973-e517-4294-a52f-1a6358efa9c8/Untitled.png)
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-09.png){: .align-center}{: width="100%" height="100%"}
 
 - 표현 데이터의 길이는 **바이트 단위**로 표현한다.
 - Transfer-Encoding(전송 코딩)을 사용하면 Content-Length를 사용하면 안된다.
@@ -144,25 +144,26 @@ last_modified_at: '2021-05-20 22:00:00 +0800'
 
 - 한국어 브라우저에서 다중 언어를 지원하는 서버에 접속한다. 서버에서는 기본적으로 영어를 지원하기 때문에 영어로 응답한다. 클라이언트가 어떤 언어를 선호하는지 정보가 없기 때문이다.
 
-![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/85a85889-6885-46c1-8287-0d89f481819c/Untitled.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/85a85889-6885-46c1-8287-0d89f481819c/Untitled.png)
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-10.png){: .align-center}{: width="100%" height="100%"}
 
 ### ****Accept-Language 적용 전
 
 - 클라이언트가 서버에 요청을 하면서, 선호하는 언어 정보를 보낸다. 서버의 기본 언어는 영어지만, 클라이언트가 원하는 언어(한국어)를 지원하기 때문에 선호 언어로 응답한다.
 
-![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/ece62d77-f44b-4b9e-b8d0-52db85e98aaa/Untitled.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/ece62d77-f44b-4b9e-b8d0-52db85e98aaa/Untitled.png)
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-11.png){: .align-center}{: width="100%" height="100%"}
 
 ### Accept-Language 복잡한 예시
 
 - 클라이언트가 선호하는 언어는 한국어지만, 다중 언어 지원 서버는 독일어를 기본으로 한다. 그리고 영어를 지원하는 상황이다. 클라이언트가 선호하는 언어 1가지만 명시하여 요청을 하고 서버에서 그 언어를 지원하지 않는다면, 서버는 기본 언어(독일어)로 응답한다.
 
-![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/11327025-001b-4008-9d7e-996dafb88a07/Untitled.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/11327025-001b-4008-9d7e-996dafb88a07/Untitled.png)
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-12.png){: .align-center}{: width="100%" height="100%"}
 
 ## 협상과 우선순위1
 
 > Quality Values(q) 값을 사용한다.
 
-![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/903e5eaa-bbc4-4f4c-bace-3cfe18c3e465/Untitled.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/903e5eaa-bbc4-4f4c-bace-3cfe18c3e465/Untitled.png)
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-13.png){: .align-center}{: width="100%" height="100%"}
+
 
 - 0~1 까지의 수를 사용하는데, 값이 클수록 우선 순위가 높다.
     - `0`이 우선순위가 가장 낮다.
@@ -172,7 +173,8 @@ last_modified_at: '2021-05-20 22:00:00 +0800'
 
 - 클라이언트는 한국어를 가장 선호하지만, 그 다음으로는 영어를 선호한다. 서버는 한국어를 지원하지 않는다. 이런 상황에서 서버는 서버의 기본 언어인 독일어로 응답하지 않고, 클라이언트가 2번째로 선호하는 영어로 응답한다.
 
-![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/3ddc7cc2-06a8-4b37-9492-efec1a6d945a/Untitled.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/3ddc7cc2-06a8-4b37-9492-efec1a6d945a/Untitled.png)
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-14.png){: .align-center}{: width="100%" height="100%"}
+
 
 ```
 Accept-Language: ko-KR,ko;q=0.9,en-US;q=0.8,en;q=0.7
@@ -190,7 +192,8 @@ Accept-Language: ko-KR,ko;q=0.9,en-US;q=0.8,en;q=0.7
 
 > 구체적인 것이 우선한다.
 
-![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/e885da30-c331-4b98-9e3c-b7bef28c3263/Untitled.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/e885da30-c331-4b98-9e3c-b7bef28c3263/Untitled.png)
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-15.png){: .align-center}{: width="100%" height="100%"}
+
 
 ```
 Accept: text/*, text/plain, text/plain;format=flowed, */*
@@ -214,4 +217,4 @@ Accept: text/*;q=0.3, text/html;q=0.7, text/html;level=1, text/html;level=2;q=0.
 
 - `text/plain`의 경우 딱 맞는 기준이 없으므로, `text/*`에 맞춰 `0.3`이 된다.
 
-![https://s3-us-west-2.amazonaws.com/secure.notion-static.com/04765601-1b43-4abb-a9c1-e544e1c415ba/Untitled.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/04765601-1b43-4abb-a9c1-e544e1c415ba/Untitled.png)
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-16.png){: .align-center}{: width="100%" height="100%"}
