--- a/_posts/http/2021-05-20-http-07.md
+++ b/_posts/http/2021-05-20-http-07.md
@@ -106,9 +106,9 @@ last_modified_at: '2021-05-20 22:00:00 +0800'
 
 ### 표현 데이터의 자연 언어
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-07.png){: .align-center}{: width="100%" height="100%"}
-
 ![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-08.png){: .align-center}{: width="100%" height="100%"}
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-09.png){: .align-center}{: width="100%" height="100%"}
 
 - 표현 데이터의 자연 언어를 표현한다.
 - 예)
@@ -121,7 +121,7 @@ last_modified_at: '2021-05-20 22:00:00 +0800'
 
 ### 표현 데이터의 길이
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-09.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-10.png){: .align-center}{: width="100%" height="100%"}
 
 - 표현 데이터의 길이는 **바이트 단위**로 표현한다.
 - Transfer-Encoding(전송 코딩)을 사용하면 Content-Length를 사용하면 안된다.
@@ -144,25 +144,25 @@ last_modified_at: '2021-05-20 22:00:00 +0800'
 
 - 한국어 브라우저에서 다중 언어를 지원하는 서버에 접속한다. 서버에서는 기본적으로 영어를 지원하기 때문에 영어로 응답한다. 클라이언트가 어떤 언어를 선호하는지 정보가 없기 때문이다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-10.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-11.png){: .align-center}{: width="100%" height="100%"}
 
 ### ****Accept-Language 적용 전
 
 - 클라이언트가 서버에 요청을 하면서, 선호하는 언어 정보를 보낸다. 서버의 기본 언어는 영어지만, 클라이언트가 원하는 언어(한국어)를 지원하기 때문에 선호 언어로 응답한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-11.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-12.png){: .align-center}{: width="100%" height="100%"}
 
 ### Accept-Language 복잡한 예시
 
 - 클라이언트가 선호하는 언어는 한국어지만, 다중 언어 지원 서버는 독일어를 기본으로 한다. 그리고 영어를 지원하는 상황이다. 클라이언트가 선호하는 언어 1가지만 명시하여 요청을 하고 서버에서 그 언어를 지원하지 않는다면, 서버는 기본 언어(독일어)로 응답한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-12.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-13.png){: .align-center}{: width="100%" height="100%"}
 
 ## 협상과 우선순위1
 
 > Quality Values(q) 값을 사용한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-13.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-14.png){: .align-center}{: width="100%" height="100%"}
 
 
 - 0~1 까지의 수를 사용하는데, 값이 클수록 우선 순위가 높다.
@@ -173,7 +173,7 @@ last_modified_at: '2021-05-20 22:00:00 +0800'
 
 - 클라이언트는 한국어를 가장 선호하지만, 그 다음으로는 영어를 선호한다. 서버는 한국어를 지원하지 않는다. 이런 상황에서 서버는 서버의 기본 언어인 독일어로 응답하지 않고, 클라이언트가 2번째로 선호하는 영어로 응답한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-14.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-15.png){: .align-center}{: width="100%" height="100%"}
 
 
 ```
@@ -192,7 +192,7 @@ Accept-Language: ko-KR,ko;q=0.9,en-US;q=0.8,en;q=0.7
 
 > 구체적인 것이 우선한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-15.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-16.png){: .align-center}{: width="100%" height="100%"}
 
 
 ```
@@ -217,4 +217,183 @@ Accept: text/*;q=0.3, text/html;q=0.7, text/html;level=1, text/html;level=2;q=0.
 
 - `text/plain`의 경우 딱 맞는 기준이 없으므로, `text/*`에 맞춰 `0.3`이 된다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-16.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-17.png){: .align-center}{: width="100%" height="100%"}
+
+# (4) 전송 방식
+
+## 단순 전송
+
+### Content-Length
+
+- 컨텐트의 길이를 정확하게 알고 있을 때 사용한다. 한 번에 요청하고 한 번에 받는다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-18.png){: .align-center}{: width="100%" height="100%"}
+
+
+## 압축 전송
+
+### Content-Encoding
+
+- 서버에서 콘텐트를 전달할 때 압축하여 전달한다. 이때, 어떻게 압축되어 있는지 정보를 함께 전달한다. 압축 전송 방식으로 전송하면 Content-Length를 줄일 수 있다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-19.png){: .align-center}{: width="100%" height="100%"}
+
+
+## 분할 전송
+
+### Transfer-Encoding
+
+- `chuncked`는 덩어리로 보낸다는 의미이다. 서버에서 데이터를 분할하는데, 각 덩어리의 바이트 정보를 함께 전송한다. 클라이언트에서는 데이터가 다 도착하기를 기다리지 않고, 데이터를 받는대로 바로바로 처리한다. `/r/n`은 끝이라는 표시이다.
+- 분할 전송 방식에서는 Content-Length를 표시하면 안된다. Cotnent-Length를 예측할 수도 없다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-20.png){: .align-center}{: width="100%" height="100%"}
+
+
+## 범위 전송
+
+### Range, Content-Range
+
+- 데이터를 전송하는데, 중간에 클라이언트와 서버의 연결이 끊겼다고 가정한다. 이런 상황에서 클라이언트는전송받지 못한 부분의 범위를 지정하여 전송을 요청할 수 있다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-21.png){: .align-center}{: width="100%" height="100%"}
+
+# (5) 일반 정보
+
+## From
+
+### 유저 에이전트의 이메일 정보
+
+- 일반적으로 잘 사용되지는 않는다.
+- 검색 엔진 같은 곳에서 주로 사용한다.
+- 요청에서 사용한다.
+
+## Referer
+
+### 이전 웹 페이지 주소
+
+- 현재 요청된 페이지의 이전 웹 페이지 주소를 의미한다.
+- A → B로 이동하는 경우, B를 요청할 때 `Referer: A`를 포함하여 요청한다.
+- Referer를 사용해서 **유입 경로를 분석**할 수 있다.
+- 요청에서 사용한다.
+- 참고 : referer는 단어 referrer의 오타
+
+## User-Agent
+
+### 유저 에이전트 애플리케이션 정보
+
+- 클리이언트의 애플리케이션 정보(웹 브라우저 정보, 등등)
+
+```
+user-agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/ 537.36 (KHTML, like Gecko) Chrome/86.0.4240.183 Safari/537.36
+```
+
+- 통계 정보를 얻을 수 있다.
+    - 사용자들이 어떤 브라우저를 사용하는지 알 수 있다.
+    - 어떤 종류의 브라우저에서 장애가 발생하는지 파악할 수 있다.
+- 요청에서 사용한다.
+
+## Server
+
+### 요청을 처리하는 ORIGIN 서버의 소프트웨어 정보
+
+- 사용자의 요청이 최종적으로 도착하는 서버(응답하는 서버)를 origin 서버라 한다. HTTP 요청을 보내면 중간에 여러 proxy 서버를 거치는데, 이런 서버들은 origin 서버가 아니다.
+
+```
+Server: Apache/2.2.22 (Debian)
+```
+
+```
+server: nginx
+```
+
+- 응답에서 사용한다.
+
+## Date
+
+### 메시지가 발생한 날짜와 시간
+
+```
+Date: Tue, 18 May 2021 08:12:31 GMT
+```
+
+- 응답에서 사용한다.
+
+# (6) 특별한 정보
+
+## Host
+
+### 요청한 호스트 정보(도메인)
+
+- 요청에서 사용하는 **필수 값**이다.
+- 하나의 서버가 여러 도메인을 처리해야 할 때, 즉 하나의 IP 주소에 여러 도메인이 적용되 있을 때 호스트를 구분하기 위해 필요하다.
+- 가가상호스트를 통해 여러 도메인을 한번에 처리할 수 있는 서버에서는 실제 애플리케이션이 여러개 구동될 수 있다. 클라이언트에서 어떤 호스트에 요청을 하는지 명시하지 않고 요청을 보낸다면, 서버 입장에서는 어떤 사이트로 요청을 보내야하는지 알 수 없다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-22.png){: .align-center}{: width="100%" height="100%"}
+
+- 요청 메시지에 Host 정보를 추가하여 요청을 보내면, 서버에서는 이를 처리할 수 있다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-23.png){: .align-center}{: width="100%" height="100%"}
+
+## Location
+
+### 페이지 리다이렉션
+
+- 웹 브라우저는 3xx 응답의 결과에 Location 헤더가 있으면, Location 위치로 자동으로 이동한다. (리다이렉트)
+- 201 (Created): Location 값은 요청에 의해 생성된 리소스 URI를 의미한다.
+- 3xx (Redirection): Location 값은 요청을 자동으로 리다이렉션하기 위한 대상 리소스를 가리킨다.
+
+## Allow
+
+### 허용 가능한 HTTP 메서드
+
+- 서버에서 어떤 HTTP 메서드를 지원하는지 클라이언트에게 알려준다.
+- `405 (Method Not Allowed)`에서 응답에 포함해야 한다.
+
+```
+Allow: GET, HEAD, PUT
+```
+
+## Retry-After
+
+### 유저 에이전트가 다음 요청을 하기까지 기다려야 하는 시간
+
+- 503 (Service Unavailable): 서비스가 언제까지 불능인지 알려줄 수 있다.
+- 날짜를 표기할 수 있다.
+
+```
+Retry-After: Fri, 31 Dec 1999 23:59:59 GMT
+```
+
+- 초단위로 표기할 수 있다.
+
+```
+Retry-After: 120
+```
+
+- 실제로 사용하기는 쉽지 않다.
+
+# (7) 인증
+
+## Authorization
+
+### 클라이언트 인증 정보를 서버에 전달
+
+```
+Authorization: Basic xxxxxxxxxxxxxxxx
+```
+
+- 인증하는 메커니즘은 여러가지가 있는데, 어떤 메커니즘인지에 따라 value값이 달라진다.
+- 어떤 인증 메커니즘인지에 상관없이 헤더에 인증 정보를 제공한다.
+
+## WWW-Authenticate
+
+### 리소스 접근시 필요한 인증 방법 정의
+
+```
+WWW-Authenticate: Newauth realm="apps", type=1, 
+				  title="Login to \"apps\"", Basic realm="simple"
+```
+
+- 리소스에 접근을 시도했는데 접근 방법이 맞지 않는다면, 401 오류가 발생한다. 401 Unauthorized 응답과 함께 사용한다.
+
+# (8) 쿠키
