--- a/_posts/http/2021-05-20-http-07.md
+++ b/_posts/http/2021-05-20-http-07.md
@@ -175,7 +175,6 @@ last_modified_at: '2021-05-20 22:00:00 +0800'
 
 ![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-15.png){: .align-center}{: width="100%" height="100%"}
 
-
 ```
 Accept-Language: ko-KR,ko;q=0.9,en-US;q=0.8,en;q=0.7
 ```
@@ -193,7 +192,6 @@ Accept-Language: ko-KR,ko;q=0.9,en-US;q=0.8,en;q=0.7
 > 구체적인 것이 우선한다.
 
 ![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-16.png){: .align-center}{: width="100%" height="100%"}
-
 
 ```
 Accept: text/*, text/plain, text/plain;format=flowed, */*
@@ -397,3 +395,152 @@ WWW-Authenticate: Newauth realm="apps", type=1,
 - 리소스에 접근을 시도했는데 접근 방법이 맞지 않는다면, 401 오류가 발생한다. 401 Unauthorized 응답과 함께 사용한다.
 
 # (8) 쿠키
+
+- Set-Cookie: 서버에서 클라이언트로 쿠키를 전달한다. (응답)
+- Cookie: 클라이언트가 서버에서 받은 쿠키를 저장하고, HTTP 요청시 서버로 전달한다.
+
+## 쿠키 미사용
+
+### 처음 welcome 페이지 접근사용
+
+- 웹브라우저에 클라이언트가 접속하면 `/welcome` 요청을 보내고, 서버는 이에 응답한다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-24.png){: .align-center}{: width="100%" height="100%"}
+
+
+### 로그인
+
+- 사용자가 로그인을 하면 `/login` 요청을 보내고, 서버는 이에 응답한다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-25.png){: .align-center}{: width="100%" height="100%"}
+
+### 로그인 이후 welcom 페이지 접근
+
+- 사용자는 로그인을 했기 때문에, 서버가 **'안녕하세요, 홍길동님!'**이라고 응답할 것을 기대할 것이다. 하지만 쿠키를 사용하지 않으면, 서버는 로그인 정보를 제공받지 못하기 때문에 **'안녕하세요 손님!'**이라고 응답한다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-26.png){: .align-center}{: width="100%" height="100%"}
+
+## Stateless
+
+- **HTTP는 무상태(stateless) 프로토콜**이다.
+- 클라이언트와 서버가 요청과 응답을 주고 받고 나면 연결이 끊어진다.
+- 클라이언트가 다시 요청하면 서버는 이전 요청을 기억하지 못한다.
+- 클라이언트와 서버는 서로 상태를 유지하지 않는다.
+
+## 쿠키 미사용 대안
+
+### 모든 요청에 사용자 정보 포함
+
+- 모든 요청에 user의 정보를 서버에 전송한다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-27.png){: .align-center}{: width="100%" height="100%"}
+
+- 모든 요청과 링크에 사용자 정보를 포함한다면, 보안에도 문제도 있을 것이고 개발자는 이를 이를 고려하여 개발을 해야 한다. 또한 브라우저를 완전히 종료하고 다시 실행한다면 어떻게 할 것인지도 개발자 입장에서 부담이 된다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-28.png){: .align-center}{: width="100%" height="100%"}
+
+## 쿠키 사용
+
+### 로그인
+
+- 웹브라우저에서 로그인을 하면, 서버에서 응답을 할 때 Set-Cookie 헤더에 user의 정보를 함께 담아 응답한다. 웹 브라우저 내부에는 쿠키 저장소가 있다. 그 저장소에 서버가 응답 메시지에 보낸 쿠키 정보를 저장한다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-29.png){: .align-center}{: width="100%" height="100%"}
+
+### 로그인 이후 welcome 페이지 접근
+
+- 웹브라우저는 요청을 보낼 때마다 쿠키 저장소에 있는 정보를 조회하여 Cookie 헤더에 함께 보낸다. 지저분하게 쿼리파라미터를 사용하여 URL에 user의 정보를 보내지 않아도 된다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-30.png){: .align-center}{: width="100%" height="100%"}
+
+### 모든 요청에 쿠키 정보 자동 포함
+
+- 요청에 필요한 정보를 URL에 모두 포함할 필요가 없다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-31.png){: .align-center}{: width="100%" height="100%"}
+
+## 쿠키
+
+- 쿠키를 서버에서 세팅할 때, `set-cookie` 헤더를 이용한다.
+
+```
+set-cookie: sessionId=abcde1234; expires=Sat, 26-Dec-2020 00:00:00 GMT; path=/; domain=.google.com; Secure
+```
+
+- 사용처
+    - 사용자 로그인 세션 관리
+    - 광고 정보 트래킹
+
+> **쿠키는 세팅하고 나면 무조건 서버에 전송된다.**
+
+- 쿠키 정보는 항상 서버에 전송된다.
+    - 네트워크 트래픽 추가 유발한다.
+    - 최소한의 정보만 사용하는 것이 좋다. (세션 id, 인증 토큰 정도)
+    - 서버에 전송하지 않고, 웹 브라우저 내부에 데이터를 저장하고 싶으면 **웹 스토리지 (localStorage, sessionStorage)**를 이용한다.
+- 주의) 보안에 민감한 데이터는 절대 저장하면 안된다. (주민번호, 신용카드 번호 등)
+
+## 쿠키 생명주기
+
+### Expires, max-age
+
+- 날짜 단위로 쿠키를 지정할 수 있다. 만료일이 되면 쿠키가 삭제된다.
+
+```
+Set-Cookie: expires=Sat, 26-Dec-2020 04:39:21 GMT
+```
+
+- 초단위로 쿠키를 지정할 수 있다. 0이나 음수를 지정하면 쿠키가 삭제된다.
+
+```
+Set-Cookie: max-age=3600 (3600초)
+```
+
+- 세션 쿠키: 만료 날짜를 생략하면 브라우저 종료시 까지만 유지된다.
+- 영속 쿠키: 만료 날짜를 입력하면 해당 날짜까지 유지된다.
+
+## 쿠키 도메인
+
+### Domain
+
+- 특정 도메인에서만 쿠키를 사용하도록 지정할 수 있다.
+
+```
+domain=example.org
+```
+
+- 명시: 명시한 문서 기준 도메인 + 서브 도메인 포함
+    - `domain=example.org`를 지정해서 쿠키 생성한다면, `example.org`는 물론이고 `dev.example.org`도 쿠키에 접근할 수 있다.
+- 생략: 현재 문서 기준 도메인만 적용된다.
+    - `example.org` 에서 쿠키를 생성하고 domain 지정을 생략한다면, `example.org` 에서만 쿠키에 접근할 수 있다. `dev.example.org`는 쿠키에 접근할 수 없다.
+
+## 쿠키 경로
+
+### Path
+
+- 특정 경로를 포함한 하위 경로 페이지만 쿠키에 접근할 수 있도록 지정할 수 있다.
+
+```
+path=/home
+```
+
+- 일반적으로 `path=/` 루트로 지정한다.
+- 예) `path=/home` 지정
+    - `/home` → 가능
+    - `/home/level1` → 가능
+    - `/home/level1/level2` → 가능
+    - `/hello` → 불가능
+
+## 쿠키 보안
+
+### Secure, HttpOnly, SameSite
+
+- **Secure**
+    - 쿠키는 http, https를 구분하지 않고 전송한다.
+    - Secure를 적용하면 https인 경우에만 전송한다.
+- **HttpOnly**
+    - XSS 공격 방지
+    - 자바스크립트에서 쿠키 접근이 불가(document.cookie)하게 한다. (원래는 가능)
+    - HTTP 전송에만 사용한다.
+- **SameSite**
+    - XSRF 공격 방지
+    - 요청 도메인과 쿠키에 설정된 도메인이 같은 경우만 쿠키를 전송한다.
