--- a/_posts/http/2021-05-26-http-08.md
+++ b/_posts/http/2021-05-26-http-08.md
@@ -18,6 +18,71 @@ last_modified_at: '2021-05-26 22:00:00 +0800'
 
 ### 첫 번째 요청
 
-- 웹브라우저에서 `star.jpg`를 요청한다. 서버에서 이미지를 내려준다.
+- 웹브라우저에서 `star.jpg`를 요청한다. `star.jpg`가 차지하는 용량이 약 1.1M라 가정한다. 이에 해당하는 네트워크를 차지하며 서버에서 이미지를 내려준다.
 
 ![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-01.png){: .align-center}{: width="100%" height="100%"}
+
+- 웹 브라우저에 `star.jpg`가 표시된다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-02.png){: .align-center}{: width="100%" height="100%"}
+
+### 두 번째 요청
+
+- 캐시가 없을 때 같은 요청을 한 번 더 한다. 서버에서는 요청을 받아 응답을 내려주는데, 서버는 헤더와 바디를 다시 새로 만들어서 보낸다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-03.png){: .align-center}{: width="100%" height="100%"}
+
+### 캐시가 없을 때 문제점
+
+- 데이터가 변경되지 않아도 계속 네트워크를 통해서 데이터를 다운로드 받아야 한다.
+- 인터넷 네트워크는 매우 느리고 비싸다.
+- 브라우저 로딩 속도가 느리다.
+- 느린 사용자 경험
+
+## 캐시 적용
+
+### 첫 번째 요청
+
+- 웹 브라우저에서 요청을 보내면, 서버에서 `Cache-Control`이라는 헤더를 이용하여 캐시를 적용한다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-04.png){: .align-center}{: width="100%" height="100%"}
+
+- 서버가 응답하면, 웹 브라우저는 응답 결과를 캐시에 저장한다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-05.png){: .align-center}{: width="100%" height="100%"}
+
+### 두 번째 요청
+
+- 요청을 보내기 전에 캐시 저장소에서 찾아보고, 캐시 유효 시간을 검증한다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-06.png){: .align-center}{: width="100%" height="100%"}
+
+- 캐시가 유효하다면 네트워크 요청을 할 필요가 없다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-07.png){: .align-center}{: width="100%" height="100%"}
+
+### 캐시 적용 후 개선점
+
+- 캐시 덕분에 캐시 가능 시간동안 네트워크를 하지 않아도 된다.
+- 비싼 네트워크 사용량을 줄일 수 있다.
+- 브라우저 로딩 속도가 매우 빠르다.
+- 빠른 사용자 경험
+
+### 세 번째 요청 - 캐시 시간 초과
+
+- 동일한 요청을 세 번째 했는데, 캐시 유효 시간이 초과 되었다고 가정한다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-08.png){: .align-center}{: width="100%" height="100%"}
+
+- 캐시 유효시간이 초과되었다면, 다시 요청을 해야 한다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-09.png){: .align-center}{: width="100%" height="100%"}
+
+- 서버의 응답 결과를 다시 캐시에 저장한다. (캐시 초기화)
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-10.png){: .align-center}{: width="100%" height="100%"}
+
+## 캐시 시간 초과
+
+- 캐시 유효 시간이 초과하면, 서버를 통해 데이터를 다시 조회하고, 캐시를 갱신한다.
+- 이때 다시 네트워크 다운로드가 발생한다.
