--- a/_posts/http/2021-05-26-http-08.md
+++ b/_posts/http/2021-05-26-http-08.md
@@ -86,3 +86,58 @@ last_modified_at: '2021-05-26 22:00:00 +0800'
 
 - 캐시 유효 시간이 초과하면, 서버를 통해 데이터를 다시 조회하고, 캐시를 갱신한다.
 - 이때 다시 네트워크 다운로드가 발생한다.
+
+# (2) 검증 헤더와 조건부 요청1
+
+## 캐시 시간 초과
+
+- 캐시 유효 시간이 초과해서 서버에 다시 요청하면 다음 두 가지 상황이 나타난다.
+    - 서버에서 기존 데이터를 변경한 상황
+    - 서버에서 기존 데이터를 변경하지 않은 상황
+- 캐시 유효 시간이 초과되긴 했지만, 클라이언트가 가진 데이터와서버가 가진 데이터가 여전히 일치할 수도 있다. 이런 경우 굳이 또 다시 데이터를 전송할 필요가 없다.
+- 데이터를 전송하는 대신에 저장해 두었던 로컬 캐시를 재사용할 수 있다.
+- 단 클라이언트의 데이터와 서버의 데이터가 같다는 사실을 확인할 수 있는 방법이 필요하다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-11.png){: .align-center}{: width="100%" height="100%"}
+
+## 검증 헤더 추가
+
+### 첫 번째 요청
+
+- 클라이언트가 star.jpg 파일을 요청하는데, 서버가 응답 메시지에 `Last-Modified` 헤더를 추가하여 데이터를 최종 수정한 날짜를 적는다. 이때 날짜는 UTC 표기법으로 적는다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-12.png){: .align-center}{: width="100%" height="100%"}
+
+- 응답 메시지를 받은 웹 브라우저는, 응답 결과를 캐시에 저장한다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-13.png){: .align-center}{: width="100%" height="100%"}
+
+### 두 번째 요청 - 캐시 시간 초과
+
+- HTTP 요청 메시지에 `if-modified-since`라는 헤더를 추가한다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-14.png){: .align-center}{: width="100%" height="100%"}
+
+- 서버에서 새로운 요청을 받았는데, 클라이언트의 데이터 최종 수정일과 서버에 있는 데이터의 최종 수정일이 일치한다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-15.png){: .align-center}{: width="100%" height="100%"}
+
+- 서버에서는 데이터가 아직 수정되지 않았음을 확인하고, 응답 메시지를 보낸다.
+    - 상태 코드를 `304 Not Modified`로 한다.
+    - HTTP Body가 없다. → 네트워크 부화가 줄어든다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-16.png){: .align-center}{: width="100%" height="100%"}
+
+- 클라이언트는 응답 결과를 재사용하고. 헤더 데이터를 갱신한다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-17.png){: .align-center}{: width="100%" height="100%"}
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-18.png){: .align-center}{: width="100%" height="100%"}
+
+## 검증 헤더와 조건부 요청 정리
+
+- 캐시 유효 시간이 초과해도, 서버의 데이터가 갱신되지 않으면
+    - 304 Not Modified + 헤더 메타 정보만 응답한다. (바디 X)
+- 클라이언트는 서버가 보낸 응답 헤더 정보로 캐시의 메타 정보를 갱신한다.
+- 클라이언트는 캐시에 저장되어 있는 데이터를 재활용한다.
+- 결과적으로 네트워크 다운로드가 발생하지만 용량이 적은 헤더 정보만 다운로드 한다.
