--- a/_posts/http/2021-05-26-http-08.md
+++ b/_posts/http/2021-05-26-http-08.md
@@ -141,3 +141,147 @@ last_modified_at: '2021-05-26 22:00:00 +0800'
 - 클라이언트는 서버가 보낸 응답 헤더 정보로 캐시의 메타 정보를 갱신한다.
 - 클라이언트는 캐시에 저장되어 있는 데이터를 재활용한다.
 - 결과적으로 네트워크 다운로드가 발생하지만 용량이 적은 헤더 정보만 다운로드 한다.
+
+# (3) 검증 헤더와 조건부 요청2
+
+## 검증 헤더와 조건부 요청 헤더
+
+### 검증 헤더
+
+- 캐시 데이터와 서버 데이터가 같은지 검증하는 데이터
+- Last-Modified , ETag
+
+### 조건부 요청 헤더
+
+- 검증 헤더로 조건에 따른 분기
+    - If-Modified-Since: Last-Modified 사용
+    - If-None-Match: Etag 사용
+- 조건이 만족하면 `200 OK`
+- 조건이 만족하지 않으면 `304 Not Modified`
+
+## 검증 헤더와 조건부 요청
+
+### 예시
+
+- If-Modified-Since: '이후에 데이터가 수정되었나요?'를 의미한다.
+- **데이터 미변경 예시**
+    - 캐시: 2021년 6월 1일 10:00:00 vs 서버: 2021년 6월 1일 10:00:00
+    - `304 Not Modified`, 헤더 데이터만 전송(BODY 미포함)
+    - 전송 용량 0.1M (헤더 0.1M, 바디 1.0M)
+- **데이터 변경 예시**
+    - 캐시: 2021년 6월 1일 10:00:00 vs 서버: 2021년 6월 1일 11:00:00
+    - `200 OK`, 모든 데이터 전송(BODY 포함)
+    - 전송 용량 1.1M (헤더 0.1M, 바디 1.0M)
+
+### Last-Modified, if-Modified-Since 단점
+
+- 1초 미만 단위로 캐시 조정이 불가능
+- 날짜 기반의 로직 사용
+- 데이터를 수정해서 날짜가 다르지만, 같은 데이터를 수정해서 데이터 결과가가 똑같은 경우가 있을 수 있다. 이런 경우에는 데이터를 수정한 날짜가 바뀌었으므로 전체 데이터를 모두 전송한다.
+- 서버에서 별도의 캐시 로직을 관리하고 싶은 경우에는 유용하지 않다.
+    - 예) 스페이스나 주석처럼 크게 영향이 없는 변경에서 캐시를 유지하고 싶은 경우
+
+### ETag, If-None-Match
+
+- ETag(Entity Tag)
+- 캐시용 데이터에 임의의 고유한 버전 이름을 달아둔다.
+    - 예) ETag: "v1.0", ETag: "a2jiodwjekjl3"
+- 데이터가 변경되면 이 이름을 바꾸어서 변경함(Hash를 다시 생성)
+    - 예) ETag: "aaaaa" -> ETag: "bbbbb"
+    - 파일을 Hash 알고리즘에 넣어서 그 결과를 받을 수 있다. 파일의 컨텐츠에 따라 Hash 값이 생성되기 때문에 파일의 컨텐츠가 동일하다면 같은 Hash 값이 반환된다.
+- 단순하게 ETag만 보내서 같으면 유지하고, 다르면 다시 받는다.
+
+## 검증 헤더 추가
+
+### 첫 번째 요청
+
+- 서버에서 응답 메시지를 보낼 때 `ETag`라는 헤더를 추가하여 보낸다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-19.png){: .align-center}{: width="100%" height="100%"}
+
+- 캐시에 데이터를 저장하면서, Etag 정보를 함께 저장한다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-20.png){: .align-center}{: width="100%" height="100%"}
+
+### 두 번째 요청 - 캐시 시간 초과
+
+- 웹 브라우저에서 두 번째 요청을 하는데, 캐시 유효 시간이 초과 되었다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-21.png){: .align-center}{: width="100%" height="100%"}
+
+- 웹 브라우저 캐시에 ETtag가 있다면, `if-Not-Matched` 헤더를 추가하여 서버에 요청 메시지를 보낸다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-22.png){: .align-center}{: width="100%" height="100%"}
+
+- 서버에 있는 데이터와 일치하는지 확인한다. ETag가 일치하므로 데이터가 아직 수정되지 않았다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-23.png){: .align-center}{: width="100%" height="100%"}
+
+- 응답 메시지를 보낼 때 상태 코드를 `304 Not Modified`로 한다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-24.png){: .align-center}{: width="100%" height="100%"}
+
+- 캐시에 있는 데이터를 그대로 재사용하고, 헤더 데이터를 갱신한다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-25.png){: .align-center}{: width="100%" height="100%"}
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-26.png){: .align-center}{: width="100%" height="100%"}
+
+## ETag, If-None-Match 정리
+
+- 진짜 단순하게 ETag만 서버에 보내서 같으면 유지, 다르면 다시 받기!
+- **캐시 제어 로직을 서버에서 완전히 관리**
+- 클라이언트는 단순히 이 값을 서버에 제공(클라이언트는 캐시 메커니즘을 모름)
+- 예)
+    - 서버는 배타 오픈 기간인 3일 동안 파일이 변경되어도 ETag를 동일하게 유지
+    - 애플리케이션 배포 주기에 맞추어 ETag 모두 갱신
+
+# (4) 캐시와 조건부 요청 헤더
+
+## 캐시 제어 헤더
+
+- Cache-Control: 캐시 제어
+- Pragma: 캐시 제어(하위 호환)
+- Expires: 캐시 유효 기간(하위 호환)
+
+## Cache-Control
+
+### 캐시 지시어(directives)
+
+- `Cache-Control: max-age`
+    - 캐시 유효 시간, 초 단위
+    - 날짜를 직접 지정하는 것보다 초단위로 지정하는 것이 더 유연하다.
+- `Cache-Control: no-cache`
+    - 데이터는 캐시해도 된다.
+    - 항상 원(origin) 서버에 검증하고 사용해야 한다. (`if-modified-since`, `if-not-match`)
+- `Cache-Control: no-store`
+    - 데이터에 민감한 정보가 있으므로 저장하면 안된다. (메모리에서 사용하고 최대한 빨리 삭제)
+- 캐시는 보통 하드디스크에 저장된다. `no-store`는 저장 자체를 하면 안된다는 메시지이고, `no-cache`는 저장은 해도 되지만 항상 원서버에 검정을 하고 사용해야 한다는 메시지이다.
+
+## Pragma
+
+### 캐시 제어(하위 호환)
+
+- `Pragma: no-cache`
+- HTTP 1.0 하위 호환
+
+## Expires
+
+### 캐시 만료일 지정(하위 호환)
+
+- `expires: Mon, 01 Jan 1990 00:00:00 GMT`
+- 캐시 만료일을 정확한 날짜로 지정한다.
+- HTTP 1.0 부터 사용되었는데, 현재는 더 유연한 `Cache-Control: max-age` 권장한다.
+- `Cache-Control: max-age`와 함께 사용하면 `Expires`는 무시된다.
+
+## 검증 헤더와 조건부 요청 헤더
+
+### 검증 헤더(Validator)
+
+- `ETag: "v1.0"`, `ETag: "asid93jkrh2l"`
+- `Last-Modified: Fri, 04 Jun 2021 07:19:24 GMT`
+
+## 조건부 요청 헤더
+
+- `If-Match`, `If-None-Match`: ETag 값 사용
+- `If-Modified-Since`, `If-Unmodified-Since`: Last-Modified 값 사용
