--- a/_posts/http/2021-05-26-http-08.md
+++ b/_posts/http/2021-05-26-http-08.md
@@ -285,3 +285,82 @@ last_modified_at: '2021-05-26 22:00:00 +0800'
 
 - `If-Match`, `If-None-Match`: ETag 값 사용
 - `If-Modified-Since`, `If-Unmodified-Since`: Last-Modified 값 사용
+
+# (5) 프록시 캐시
+
+## 원 서버 직접 접근
+
+### Origin Server
+
+- 한국에 있는 클라이언트에서 미국에 있는 원 서버에 접근을 한다. 각각의 사용자들이 하나의 이미지를 다운로드 하기 위해 0.5초씩 소요된다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-27.png){: .align-center}{: width="100%" height="100%"}
+
+## 프록시 캐시 도입
+
+### 첫 번째 요청
+
+- 한국 어딘가에 프록시 캐시 서버를 둔다. 한국에 있는 클라이언트에서 요청이 오면, 프록시 캐시 서버를 거쳐서 오도록 한다.
+    - 예) CDN Service
+- 첫 번째 유저가 요청할 때 원 서버에서 데이터를 다운로드 받는다. 두 번째 요청부터는 프록시 캐시 서버에 있는 데이터를 이용한다.
+- 로컬에 저장되는 캐시를 **private 캐시**라 하고, 프록시 캐시 서버에 저장되는 캐시를 **public 캐시**라 한다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-28.png){: .align-center}{: width="100%" height="100%"}
+
+## Cache-Control
+
+### 캐시 지시어(directives) - 기타
+
+- `Cache-Control: public`
+    - 응답이 public 캐시에 저장되어도 된다.
+    - 예) 공용으로 사용되는 이미지
+- `Cache-Control: private`
+    - 응답이 해당 사용자만을 위한 것임, private 캐시에 저장해야 함(기본값)
+    - 예) 로그인 정보
+- `Cache-Control: s-maxage`
+    - 프록시 캐시에만 적용되는 max-age
+- `Age: 60` (HTTP 헤더)
+    - 오리진 서버에서 응답 후 프록시 캐시 내에 머문 시간(초)
+
+# (6) 캐시 무효화
+
+## Cache-Control
+
+### 확실한 캐시 무효화 응답
+
+- 캐시를 적용하지 않아도 브라우저에서 임의로 캐시를 저장하기도 한다. 캐시를 확실하게 무효화하고 싶을 때, 관련 헤더를 넣어 처리할 수 있다.
+- `Cache-Control: no-cache, no-store, must-revalidate`
+- `Pragma: no-cache`
+    - HTTP 1.0 하위 호환
+
+### 캐시 지시어(directives) - 확실한 캐시 무효화
+
+- `Cache-Control: no-cache`
+    - 데이터는 캐시해도 되지만, 항상 원 서버에 검증하고 사용(이름에 주의!)
+- `Cache-Control: no-store`
+    - 데이터에 민감한 정보가 있으므로 저장하면 안됨(메모리에서 사용하고 최대한 빨리 삭제)
+- `Cache-Control: must-revalidate`
+    - 캐시 만료후 최초 조회시 원 서버에 검증해야함
+    - 원 서버 접근 실패시 반드시 오류가 발생해야함 - `504(Gateway Timeout)`
+    - `must-revalidate`는 캐시 유효 시간이라면 캐시를 사용함
+- `Pragma: no-cache`
+    - HTTP 1.0 하위 호환
+
+## no-cache vs must-revalidate
+
+### no-cache 기본 동작
+
+- 프록시 캐시에서 `no-cache` 요청을 받으면, 원서버에 요청을 한다. 원 서버가 이를 검증한다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-29.png){: .align-center}{: width="100%" height="100%"}
+
+- 일시적으로 원 서버에 접근이 불가한 상황이라 가정한다. 이런 경우 캐시 서버 설정에 따라 캐시 데이터를 반환할 수 있다. 오류보다는 오래된 데이터라도 보여주는게 낫다면, `200 OK`를 반환하도록 설정한다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-30.png){: .align-center}{: width="100%" height="100%"}
+
+### must-revalidate
+
+- 원 서버에 접근할 수 없는 경우 항상 오류가 발생해야 한다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-31.png){: .align-center}{: width="100%" height="100%"}
+
