--- a/_posts/2020/about-me/2100-04-18-about-me.md
+++ b/_posts/2020/about-me/2100-04-18-about-me.md
@@ -1,12 +1,11 @@
 ---
 title: About Me
 layout: single
-categories:
-- About-Me
+about : jiyounyoo
 last_modified_at: '2100-04-18 23:00:00 +0800'
 ---
 
-## Jiyoun You
+## Jiyoun Yoo
 - ENTJ ✨
 - Junior Web developer 💻
 - 한국어 / English 💬 
@@ -14,13 +13,13 @@ last_modified_at: '2100-04-18 23:00:00 +0800'
 <br>  
 
 ## Hello, world!
-[![Blog Badge](http://img.shields.io/badge/-Blog-blue?style=flat-square&logo=0E9648&link=https://jiyounyou.github.io/)](https://jiyounyou.github.io/)  Please visit my blog to see what I study as a junior web developer.
+[![Blog Badge](http://img.shields.io/badge/-Blog-blue?style=flat-square&logo=0E9648&link=https://jiyoun-yoo.github.io/)](https://jiyoun-yoo.github.io/)  Please visit my blog to see what I study as a junior web developer.
 
 ### Contact me here
 - If you want to contact me, send me an [![Gmail Badge](https://img.shields.io/badge/Gmail-d14836?style=flat-square&logo=Gmail&logoColor=white&link=mailto:younny418@gmail.com)](mailto:younny418@gmail.com).
 
 ### Explore my projects
-- I have all of my projects in my  [![Github Badge](https://img.shields.io/badge/-Github-black?style=flat-square&logo=0E9648&link=https://github.com/jiyounyou/)](https://github.com/jiyounyou) 
+- I have all of my projects in my  [![Github Badge](https://img.shields.io/badge/-Github-black?style=flat-square&logo=0E9648&link=https://github.com/jiyoun-yoo/)](https://github.com/jiyoun-yoo) 
 - Latest Work : [Devloper Village](https://github.com/procompiler/developer-village)
 
 <br>  
