--- a/_posts/2021/http/2021-05-10-http-03.md
+++ b/_posts/2021/http/2021-05-10-http-03.md
@@ -55,7 +55,7 @@ last_modified_at: '2021-05-10 22:00:00 +0800'
 - 서버가 요청에 대한 결과를 만들어서 응답(Response)을 한다.
 - 클라이언트는 그 응답 결과에 따라 동작을 한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-01.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-01.png){: .align-center}{: width="100%" height="100%"}
 
 - 왜 서버와 클라이언트를 분리할까? 이전에는 둘이 분리되어있지 않았다. 클라이언트와 서버를 개념적으로 분리한다. 비즈니스 로직과 데이터는 서버에 몰아 넣고, 클라이언트는 UI와 사용성에 집중시킨다. 서버와 클라이언트는 서로 독립적이 된다. 서버는 서버의 역할에만 집중하고, 클라이언트는 클라이언트의 역할에만 집중한다. 즉, 서버의 백엔드에서는 서버의 성능에만 집중하면 되고, 클라이언트는 UI와 사용량에만 집중한다.
 
@@ -134,7 +134,7 @@ last_modified_at: '2021-05-10 22:00:00 +0800'
 - Stateful은 항상 같은 서버가 유지되어야 한다.
 - 클라이언트의 요청 정보를 서버에 계속 저장하고 있어야 한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-02.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-02.png){: .align-center}{: width="100%" height="100%"}
 - 클라이언트의 요청이 완료되지 않은 상태에서 서버에 장애가 발생한다면, 클라이언트는 처음부터 요청을 다시 해야 한다.
 
 ![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-03.png){: .align-center}{: width="100%" height="100%"}
