--- a/_posts/2021/http/2021-05-20-http-07.md
+++ b/_posts/2021/http/2021-05-20-http-07.md
@@ -19,7 +19,7 @@ last_modified_at: '2021-05-20 22:00:00 +0800'
 - header-field = field-name:OWS field-value OWS (OWS:띄어쓰기 허용)
 - field-name은 대소문자 구문 없음
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-01.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-01.png){: .align-center}{: width="100%" height="100%"}
 
 ### 용도
 
@@ -29,7 +29,7 @@ last_modified_at: '2021-05-20 22:00:00 +0800'
 
 ### 분류 - RFC2616(과거)
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-02.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-02.png){: .align-center}{: width="100%" height="100%"}
 
 - **General 헤더**: 메시지 전체에 적용되는 정보, 예) `Connection: close`
 - **Request 헤더**: 요청 정보, 예) `User-Agent: Mozilla/5.0 (Macintosh; ..)`
@@ -40,7 +40,7 @@ last_modified_at: '2021-05-20 22:00:00 +0800'
 
 ### message body - RFC2616(과거)
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-03.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-03.png){: .align-center}{: width="100%" height="100%"}
 
 - 메시지 본문(message body)은 엔티티 본문(entity body)을 전달하는 데 사용된다
 - **엔티티 본문**은 요청이나 응답에서 전달하는 실제 데이터이다.
@@ -55,7 +55,7 @@ last_modified_at: '2021-05-20 22:00:00 +0800'
 
 ### message body - RFC7230(최신)
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-04.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-04.png){: .align-center}{: width="100%" height="100%"}
 
 - 메시지 본문(message body)을 통해 표현 데이터를 전달한다.
 - 메시지 본문 = 페이로드(payload)
@@ -66,7 +66,7 @@ last_modified_at: '2021-05-20 22:00:00 +0800'
 
 # (2) 표현
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-05.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-05.png){: .align-center}{: width="100%" height="100%"}
 
 - Content-Type: 표현 데이터의 형식
     - 예) HTML, JSON, XML
@@ -79,7 +79,7 @@ last_modified_at: '2021-05-20 22:00:00 +0800'
 
 ### 표현 데이터의 형식 설명
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-06.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-06.png){: .align-center}{: width="100%" height="100%"}
 
 - content body에 들어가는 내용이 무엇인지 알려준다.
 - 미디어 타입, 문자 인코딩
@@ -92,7 +92,7 @@ last_modified_at: '2021-05-20 22:00:00 +0800'
 
 ### 표현 데이터 인코딩
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-07.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-07.png){: .align-center}{: width="100%" height="100%"}
 
 - 표현 데이터를 압축하기 위해 사용한다.
 - 데이터를 전달하는 곳에서압축 후 인코딩 헤더를 추가한다.
@@ -106,7 +106,7 @@ last_modified_at: '2021-05-20 22:00:00 +0800'
 
 ### 표현 데이터의 자연 언어
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-08.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-08.png){: .align-center}{: width="100%" height="100%"}
 
 ![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-09.png){: .align-center}{: width="100%" height="100%"}
 
