--- a/_posts/2020/mysql/2020-10-28-mysql-09.md
+++ b/_posts/2020/mysql/2020-10-28-mysql-09.md
@@ -129,4 +129,4 @@ last_modified_at: '2020-10-28 22:00:00 +0800'
 - 각 *Row Source* 바이너리 명령은 테이블이나 뷰, 조인 또는 그룹 연산 결과를 생성한다.
 - 최종 실행 결과는 애플리케이션에게 리턴할 **결과 데이터(Result Set)**이다.
 
-![SQL 실행과정]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/mysql/sql-processing.png){: .align-center}{: width="60%" height="60%"}
+![SQL 실행과정]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/mysql/sql-processing.png){: .align-center}{: width="60%" height="60%"}
