--- a/_posts/2020/servlet/2020-11-23-servlet-3.md
+++ b/_posts/2020/servlet/2020-11-23-servlet-3.md
@@ -55,7 +55,7 @@ public class Servlet01 extends GenericServlet {
 }
 ```
 
-![클라이언트로 출력하기]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/servlet/servlet-3-01.png){: .align-center}{: width="100%" height="100%"}
+![클라이언트로 출력하기]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/servlet/servlet-3-01.png){: .align-center}{: width="100%" height="100%"}
 
 
 ## 2. 한글 깨짐 현상 처리
@@ -91,7 +91,7 @@ public class Servlet02 extends GenericServlet {
 }
 ```
 
-![한글 깨짐 현상 처리]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/servlet/servlet-3-02.png){: .align-center}{: width="100%" height="100%"}
+![한글 깨짐 현상 처리]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/servlet/servlet-3-02.png){: .align-center}{: width="100%" height="100%"}
 
 
 ## 3. HTML 출력하기
@@ -119,7 +119,7 @@ public class Servlet03 extends GenericServlet {
 }
 ```
 
-![HTML 출력하기]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/servlet/servlet-3-03.png){: .align-center}{: width="100%" height="100%"}
+![HTML 출력하기]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/servlet/servlet-3-03.png){: .align-center}{: width="100%" height="100%"}
 
 
 ## 4. 바이너리 데이터 출력하기
@@ -163,4 +163,4 @@ public class Servlet04 extends GenericServlet {
 }
 ```
 
-![바이너리 출력하기]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/servlet/servlet-3-04.png){: .align-center}{: width="100%" height="100%"}
+![바이너리 출력하기]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/servlet/servlet-3-04.png){: .align-center}{: width="100%" height="100%"}
