--- a/_posts/2020/servlet/2020-11-24-.md
+++ b/_posts/2020/servlet/2020-11-24-.md
@@ -80,7 +80,7 @@ last_modified_at: '2020-11-24 22:00:00 +0800'
 
 - `<form action="s1" method="get">`와 같이 get 요청임을 명시하거나 method를 생략하면 get 요청이다.
   
-![GET 요청]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/servlet/servlet-4-01.png){: .align-center}{: width="100%" height="100%"}
+![GET 요청]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/servlet/servlet-4-01.png){: .align-center}{: width="100%" height="100%"}
 
 ### 웹 브라우저가 보낸 데이터 읽기
 
@@ -294,7 +294,7 @@ public class Servlet02 extends GenericServlet {
 
 - `<form action="s2" method="post">`와 같이 post 요청임을 명시해야하만 post 요청이다. 생략하면 get요청이다.
 
-![POST 요청]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/servlet/servlet-4-02.png){: .align-center}{: width="100%" height="100%"}
+![POST 요청]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/servlet/servlet-4-02.png){: .align-center}{: width="100%" height="100%"}
 
 - `action="/bitcamp-web-project/ex04/s2"`와 같이 절대 경로를 명시하면, 이후 URL을 변경하고 싶을 때마다 모든 html 문서를 찾아 변경해야 한다. **상대 경로**를 적으면 쉽게 수정할 수 있다.
 
@@ -483,7 +483,7 @@ GET 으로 파일을 전송할 수 없다. 단지 파일 이름만 전송한다.
 </html>
 ```
 
-![파일 업로드]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/servlet/servlet-4-03.png){: .align-center}{: width="100%" height="100%"}
+![파일 업로드]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/servlet/servlet-4-03.png){: .align-center}{: width="100%" height="100%"}
 
 ```java
 @WebServlet("/ex04/s3")
