--- a/_posts/2021/http/2021-05-09-http-02.md
+++ b/_posts/2021/http/2021-05-09-http-02.md
@@ -22,11 +22,11 @@ last_modified_at: '2021-05-09 22:00:00 +0800'
 - URI, URL, URN
     - URN은 대상의 이름 그 자체를 말하고, URL은 위치를 의미한다 URN과 URL을 합하여 URI라 한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-02-01.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-02-01.png){: .align-center}{: width="100%" height="100%"}
 
 - 우리가 일반적으로 웹 브라우저에서 사용하는 웹 사이트의 주소는 URL이다. URL을 이용하여 특정 이름을 부여할 수 있는데, 이를 URN이라 한다. 다만, URN과 URL이 매핑되어 있는 무언가가 없기 때문에 URN만을 가지고는 특정 웹사이트를 찾기 어렵다. 실생활에서는 거의 URL을 주로 사용하고 있다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-02-02.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-02-02.png){: .align-center}{: width="100%" height="100%"}
 
 
 ## URL, URL, URN
@@ -114,7 +114,7 @@ last_modified_at: '2021-05-09 22:00:00 +0800'
 - 웹 브라우저에서 구글 서버로 요청을 보낸다.
 - 먼저 DNS를 조회하여 IP 주소와 PORT 번호를 알아낸다. 그리고 HTTP 요청 메세지를 생성한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-02-03.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-02-03.png){: .align-center}{: width="100%" height="100%"}
 
 - HTTP 요청 메시지
 
@@ -129,19 +129,19 @@ Host: www.google.com
 - SOCKET 라이브러리를 통해 OS의 TCP/IP 계층으로 전달한다.
 - TCP/IP 패킷이 생성되는데, HTTP 메시지를 포함한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-02-04.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-02-04.png){: .align-center}{: width="100%" height="100%"}
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-02-05.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-02-05.png){: .align-center}{: width="100%" height="100%"}
 
 - 웹브라우저에서 패킷을 인터넷 망에 던진다. 서버에 요청 패킷이 도착하면 서버는 TCP/IP 패킷을 제거하고 HTTP 메시지를 꺼내어 해석한다. 쿼리의 의미를 파악하고 그에 맞는 데이터를 찾는다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-02-06.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-02-06.png){: .align-center}{: width="100%" height="100%"}
 
 ## HTTP 응답
 
 - 클라이언트에서 요청한 데이터를 서버가 찾으면, 응답 패킷을 전달한다. 이때 HTTP 응답 패킷에는 HTTP 응답 메시지가 들어있다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-02-07.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-02-07.png){: .align-center}{: width="100%" height="100%"}
 
 - HTTP 응답 메시지
 
