--- a/_posts/2021/http/2021-05-11-http-04.md
+++ b/_posts/2021/http/2021-05-11-http-04.md
@@ -90,7 +90,7 @@ last_modified_at: '2021-05-11 22:00:00 +0800'
 
 ## GET
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-01.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-01.png){: .align-center}{: width="100%" height="100%"}
 
 - 리소스를 조회한다.
 - 서버에 전달하고싶은 데이터는 query를 통해 전달한다.
@@ -100,19 +100,19 @@ last_modified_at: '2021-05-11 22:00:00 +0800'
 
 - 메시지를 전달한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-02.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-02.png){: .align-center}{: width="100%" height="100%"}
 
 - 메시지가 서버에 도착한다. 서버가 메서드를 읽어 내부 데이터를 조회하여 응답할 데이터를 만든다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-03.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-03.png){: .align-center}{: width="100%" height="100%"}
 
 - 서버가 응답한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-04.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-04.png){: .align-center}{: width="100%" height="100%"}
 
 ## POST
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-05.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-05.png){: .align-center}{: width="100%" height="100%"}
 
 - 클라이언트에서 **메시지 바디에 요청 데이터를 전달**한다.
 - 서버는 **요청 데이터를 처리**한다.
@@ -123,11 +123,11 @@ last_modified_at: '2021-05-11 22:00:00 +0800'
 
 - 클라이언트가 메시지를 전달한다. 서버는 `/members`라고 요청이 들어오면 새로운 회원을 등록하기로 미리 약속을 해 놓고 그 기능을 수행한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-06.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-06.png){: .align-center}{: width="100%" height="100%"}
 
 - 클라이언트의 요청에 따라 기능을 수행한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-07.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-07.png){: .align-center}{: width="100%" height="100%"}
 
 - 서버가 응답한다. 응답 메시지에는 자원이 생성된 경로를 보내준다.
 
