--- a/_posts/2021/http/2021-05-12-http-05.md
+++ b/_posts/2021/http/2021-05-12-http-05.md
@@ -45,7 +45,7 @@ last_modified_at: '2021-05-12 22:00:00 +0800'
 - 이미지, 정적 텍스트 문서를 조회한다. 조회는 GET을 사용한다.
 - 정적 데이터는 일반적으로 추라적인 데이터를 전달할 필요 없이, 쿼리 파라미터 없이 리소스 경로로 단순하게 조회가 가능하다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-05-01.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-05-01.png){: .align-center}{: width="100%" height="100%"}
 
 ## 동적 데이터 조회
 
@@ -54,7 +54,7 @@ last_modified_at: '2021-05-12 22:00:00 +0800'
 - 조회 조건을 걸어주는 필터, 조회 결과를 정렬하는 정렬 조건에 주로 사용한다. 조회는 GET을 사용한다.
 - 클라이언트에서 쿼리 파라미터를 통해 추가적인 정보를 제공하고, 서버에서는 쿼리 파라미터를 key-value로 사용하여 그 데이터를 기반으로 동적으로 결과를 생성한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-05-01.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-05-01.png){: .align-center}{: width="100%" height="100%"}
 
 ## HTML Form 데이터 전송
 
@@ -63,27 +63,27 @@ last_modified_at: '2021-05-12 22:00:00 +0800'
 - form의 submit 버튼을 누르면, 웹 브라우저가 폼의 데이터를 읽어서 HTTP 메시지를 생성한다.
 - POST 방식에서는 데이터를 메시지 바디에 넣는데, 쿼리 파라미터와 유사한 key-value 형태의 데이터를 서버에 전송한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-05-03.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-05-03.png){: .align-center}{: width="100%" height="100%"}
 
 ### GET 전송 - 저장
 
 - GET을 이용해서도 데이터를 저장할 수 있다. GET 방식에서는 메시지 바디를 쓰지 않고 form 태그의 데이터를 URL 경로에 넣는다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-05-04.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-05-04.png){: .align-center}{: width="100%" height="100%"}
 
 ### GET 전송 - 조회
 
 - 주의! GET은 조회에만 사용한다. 리소스 변경이 발생하는 곳에 사용하면 안된다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-05-05.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-05-05.png){: .align-center}{: width="100%" height="100%"}
 
 ### multipart/form-data
 
 - 이미지를 함께 전송해야 하는 경우, multipart/form-data를 지정한다. 멀티로 여러 타입의 데이터를 보낼 수 있는데, 주로 바이너리 데이터를 사용할 때 사용한다. 메시지 바디에 데이터를 넣는다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-05-05.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-05-05.png){: .align-center}{: width="100%" height="100%"}
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-05-06.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-05-06.png){: .align-center}{: width="100%" height="100%"}
 
 ### 정리
 
