archive layout changed

--- a/_posts/about-me/2100-04-18-about-me.md
+++ b/_posts/about-me/2100-04-18-about-me.md
@@ -1,7 +1,8 @@
 ---
-title: About Me
+title: About Jiyoun Yoo
 layout: single
-about : jiyounyoo
+about : 
+- jiyounyoo
 last_modified_at: '2100-04-18 23:00:00 +0800'
 ---
 
