--- a/_posts/http/2021-05-09-http-02.md
+++ b/_posts/http/2021-05-09-http-02.md
@@ -1,9 +1,9 @@
 ---
 title: '[HTTP] 2. URI와 웹 브라우저 요청 흐름'
 categories:
-- Http
+- HTTP
 tag:
-- [Http]
+- [HTTP]
 last_modified_at: '2021-05-09 22:00:00 +0800'
 ---
 
