--- a/_posts/http/2021-05-10-http-03.md
+++ b/_posts/http/2021-05-10-http-03.md
@@ -1,9 +1,9 @@
 ---
 title: '[HTTP] 3. HTTP 기본'
 categories:
-- Http
+- HTTP
 tag:
-- [Http]
+- [HTTP]
 last_modified_at: '2021-05-10 22:00:00 +0800'
 ---
 
