--- a/_posts/http/2021-05-13-http-06.md
+++ b/_posts/http/2021-05-13-http-06.md
@@ -1,9 +1,9 @@
 ---
 title: '[HTTP] 6. HTTP 상태 코드'
 categories:
-- Http
+- HTTP
 tag:
-- [Http]
+- [HTTP]
 last_modified_at: '2021-05-13 22:00:00 +0800'
 ---
 
