--- a/_posts/http/2021-05-20-http-07.md
+++ b/_posts/http/2021-05-20-http-07.md
@@ -1,9 +1,9 @@
 ---
 title: '[HTTP] 7. HTTP 헤더1 - 일반 헤더'
 categories:
-- Http
+- HTTP
 tag:
-- [Http]
+- [HTTP]
 last_modified_at: '2021-05-20 22:00:00 +0800'
 ---
 
