--- a/_posts/javaScript/2021-01-12-modernJs-2.4.md
+++ b/_posts/javaScript/2021-01-12-modernJs-2.4.md
@@ -1,7 +1,7 @@
 ---
 title: '[코어 자바스크립트] 2.4 변수와 상수'
 categories:
-- javaScript
+- JavaScript
 tag:
 - [javaScript, modernJs]
 last_modified_at: '2021-01-12 22:00:00 +0800'
