--- a/_posts/http/2021-05-07-http-01.md
+++ b/_posts/http/2021-05-07-http-01.md
@@ -1,9 +1,9 @@
 ---
 title: '[HTTP] 1. 인터넷 네트워크'
 categories:
-- Http
+- HTTP
 tag:
-- [Http]
+- [HTTP]
 last_modified_at: '2021-05-07 22:00:00 +0800'
 ---
 
