--- a/_posts/http/2021-05-26-http-08.md
+++ b/_posts/http/2021-05-26-http-08.md
@@ -1,9 +1,9 @@
 ---
 title: '[HTTP] 8. HTTP 헤더2 - 캐시와 조건부 요청'
 categories:
-- Http
+- HTTP
 tag:
-- [Http]
+- [HTTP]
 last_modified_at: '2021-05-26 22:00:00 +0800'
 ---
 
