--- a/_posts/java-algorithm/2021-01-17-algorithm-01.md
+++ b/_posts/java-algorithm/2021-01-17-algorithm-01.md
@@ -1,7 +1,7 @@
 ---
 title: '[Do it! 알고리즘]01. 기본 알고리즘'
 categories:
-- java
+- Algorithm
 tag:
 - [java, algorithm]
 last_modified_at: '2021-01-17 22:00:00 +0800'
