--- a/_posts/java-algorithm/2021-01-19-algorithm-02.md
+++ b/_posts/java-algorithm/2021-01-19-algorithm-02.md
@@ -1,7 +1,7 @@
 ---
 title: '[Do it! 알고리즘]02. 기본 구조'
 categories:
-- java
+- Algorithm
 tag:
 - [java, algorithm]
 last_modified_at: '2021-01-19 22:00:00 +0800'
