--- a/_posts/java-algorithm/2021-01-21-algorithm-04.md
+++ b/_posts/java-algorithm/2021-01-21-algorithm-04.md
@@ -1,7 +1,7 @@
 ---
 title: '[Do it! 알고리즘]04. 스택과 큐'
 categories:
-- java
+- Algorithm
 tag:
 - [java, algorithm]
 last_modified_at: '2021-01-21 22:00:00 +0800'
