--- a/_posts/javaScript/2021-01-11-modernJs-2.2.md
+++ b/_posts/javaScript/2021-01-11-modernJs-2.2.md
@@ -1,7 +1,7 @@
 ---
 title: '[코어 자바스크립트] 2.2 코드 구조'
 categories:
-- javaScript
+- JavaScript
 tag:
 - [javaScript, modernJs]
 last_modified_at: '2021-01-11 22:00:00 +0800'
