--- a/_posts/javaScript/2021-01-13-modernJs-2.6.md
+++ b/_posts/javaScript/2021-01-13-modernJs-2.6.md
@@ -1,7 +1,7 @@
 ---
 title: '[코어 자바스크립트] 2.6 alert, prompt, confirm을 이용한 상호작용'
 categories:
-- javaScript
+- JavaScript
 tag:
 - [javaScript, modernJs]
 last_modified_at: '2021-01-13 22:00:00 +0800'
