--- a/_posts/javaScript/2021-01-14-modernJs-2.7.md
+++ b/_posts/javaScript/2021-01-14-modernJs-2.7.md
@@ -1,7 +1,7 @@
 ---
 title: '[코어 자바스크립트] 2.7 형 변환'
 categories:
-- javaScript
+- JavaScript
 tag:
 - [javaScript, modernJs]
 last_modified_at: '2021-01-14 22:00:00 +0800'
