--- a/_posts/javaScript/2021-01-14-modernJs-2.9.md
+++ b/_posts/javaScript/2021-01-14-modernJs-2.9.md
@@ -1,7 +1,7 @@
 ---
 title: '[코어 자바스크립트] 2.9 비교 연산자'
 categories:
-- javaScript
+- JavaScript
 tag:
 - [javaScript, modernJs]
 last_modified_at: '2021-01-14 20:00:00 +0800'
