--- a/_posts/javaScript/2021-01-15-modernJs-2.10.md
+++ b/_posts/javaScript/2021-01-15-modernJs-2.10.md
@@ -1,7 +1,7 @@
 ---
 title: '[코어 자바스크립트] 2.10 if와 ?를 사용한 조건 처리'
 categories:
-- javaScript
+- JavaScript
 tag:
 - [javaScript, modernJs]
 last_modified_at: '2021-01-15 22:00:00 +0800'
