--- a/_posts/javaScript/2021-01-16-modernJs-2.11.md
+++ b/_posts/javaScript/2021-01-16-modernJs-2.11.md
@@ -1,7 +1,7 @@
 ---
 title: '[코어 자바스크립트] 2.11 논리 연산자'
 categories:
-- javaScript
+- JavaScript
 tag:
 - [javaScript, modernJs]
 last_modified_at: '2021-01-16 22:00:00 +0800'
