--- a/_posts/network/http/2021-05-09-http-02.md
+++ b/_posts/network/http/2021-05-09-http-02.md
@@ -1,7 +1,7 @@
 ---
 title: '[HTTP] 2. URI와 웹 브라우저 요청 흐름'
 categories:
-- HTTP
+- Network
 tag:
 - [HTTP]
 last_modified_at: '2021-05-09 22:00:00 +0800'
