--- a/_posts/network/http/2021-05-20-http-07.md
+++ b/_posts/network/http/2021-05-20-http-07.md
@@ -1,7 +1,7 @@
 ---
 title: '[HTTP] 7. HTTP 헤더1 - 일반 헤더'
 categories:
-- HTTP
+- Network
 tag:
 - [HTTP]
 last_modified_at: '2021-05-20 22:00:00 +0800'
