--- a/_posts/network/http/2021-05-26-http-08.md
+++ b/_posts/network/http/2021-05-26-http-08.md
@@ -1,7 +1,7 @@
 ---
 title: '[HTTP] 8. HTTP 헤더2 - 캐시와 조건부 요청'
 categories:
-- HTTP
+- Network
 tag:
 - [HTTP]
 last_modified_at: '2021-05-26 22:00:00 +0800'
