--- a/_posts/network/http/2021-05-10-http-03.md
+++ b/_posts/network/http/2021-05-10-http-03.md
@@ -137,23 +137,23 @@ last_modified_at: '2021-05-10 22:00:00 +0800'
 ![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-02.png){: .align-center}{: width="100%" height="100%"}
 - 클라이언트의 요청이 완료되지 않은 상태에서 서버에 장애가 발생한다면, 클라이언트는 처음부터 요청을 다시 해야 한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-03.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-03.png){: .align-center}{: width="100%" height="100%"}
 ## 무상태
 
 - Stateless는 서버가 상태를 보관하지 않는다.
 - 클라이언트가 요청을 할 때부터 필요한 정보를 모두 담아서 보낸다. 서버는 클라이언트의 상태를 보관하지 않고, 필요시에 응답한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-04.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-04.png){: .align-center}{: width="100%" height="100%"}
 
 - 중간에 서버1에 장애가 발생한다면, 중계서버는 클라이언트의 요청을 서버2로 던진다. 클라이언트의 요청에 정보가 모두 포함되어 있기 때문에, 서버2는 문제 없이 요청을 처리할 수 있다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-05.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-05.png){: .align-center}{: width="100%" height="100%"}
 
 ### 스케일 아웃
 
 - 서버를 확장하는 것을 스케일 아웃이라 하는데, 무상태는 서버를 수평 확장하는 데 유리하다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-06.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-06.png){: .align-center}{: width="100%" height="100%"}
 
 - 예를 들어 이벤트 페이지가 있다면, 많은 사용자들이 해당 페이지에 접속하려고 할 것이다. 이런 경우에 대비하여 백엔드에서 간단하게 서버를 확장할 수 있다.
 
@@ -173,15 +173,15 @@ last_modified_at: '2021-05-10 22:00:00 +0800'
 
 - 클라이언트1이 요청을 하고 서버가 응답한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-07.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-07.png){: .align-center}{: width="100%" height="100%"}
 
 - 그리고 클라이언트2가 요청을 하고 서버가 응답 응답한다.그 동안에도 클라이언트1과 서버는 연결을 유지한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-08.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-08.png){: .align-center}{: width="100%" height="100%"}
 
 - 클라이언트3이 요청을 하고 서버가 응답을 하는 동안에도 클라이언트1과 클라이언트2는 연결이 유지된다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-09.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-09.png){: .align-center}{: width="100%" height="100%"}
 
 > 연결을 유지하는 모델에서 서버는 계속해서 연결을 유지하고, 따라서 연결을 유지하기 위한 서버 자원을 소모하게 된다.
 
@@ -190,21 +190,21 @@ last_modified_at: '2021-05-10 22:00:00 +0800'
 
 - 클라이언트1이 요청을 하고 서버가 응답한다. 그리고 연결을 종료한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-10.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-10.png){: .align-center}{: width="100%" height="100%"}
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-11.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-11.png){: .align-center}{: width="100%" height="100%"}
 
 - 클라이언트2가 요청을 하고 서버가 응답한다. 그리고 연결을 종료한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-12.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-12.png){: .align-center}{: width="100%" height="100%"}
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-13.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-13.png){: .align-center}{: width="100%" height="100%"}
 
 - 클라이언트3이 요청을 하고 서버가 응답한다. 그리고 연결을 종료한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-14.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-14.png){: .align-center}{: width="100%" height="100%"}
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-15.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-15.png){: .align-center}{: width="100%" height="100%"}
 
 > 연결을 유지하지 않는 모델은 서버는 연결을 유지하지 않기 때문에 최소한의 자원만 사용하여 서버를 운영한다.
 
@@ -223,11 +223,11 @@ last_modified_at: '2021-05-10 22:00:00 +0800'
 - 웹 브라우저로 사이트를 요청하면 HTML뿐만 아니라 자바스크립트, CSS, 추가 이미지 등 많은 자원이 함께 다운로드된다.
 - 계속해서 연결을 끊고 다시 연결하고 또 연결을 끊고 다시 연결하는 것은 비효율적이다. 모든 요청이 하나 끝날 때마다 연결을 종료하는 아래의 예시에서는 HTML, 자바스크립트, 이미지 응답을 받는 데 총 0.9초가 소요된다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-16.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-16.png){: .align-center}{: width="100%" height="100%"}
 
 - 최근에는 **HTTP 지속 연결(Persistent Connection)**로 문제 해결했다. 모든 요청이 끝날때 까지 연결을 유지하는 아래의 예시에서는 HTML, 자바스크립트, 이미지 응답을 받는 데 총 0.5초가 소요된다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-17.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-17.png){: .align-center}{: width="100%" height="100%"}
 
 - HTTP/2, HTTP/3에서는 위와 같은 과정을 더 빠르게 진행하도록 최적화하였다. 특히 HTTP/3에서는 UDP 프로토콜을 사용하기 때문에 연결 속도 자체가 훨씬 빠르다.
 
@@ -268,9 +268,9 @@ Content-Length: 3423
     - 요청 메시지와 응답 메시지는 시작 라인이 다르고, 나머지 부분은 동일하다.
     - HTTP 요청 메시지도 메시지 바디를 가질 수 있다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-18.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-18.png){: .align-center}{: width="100%" height="100%"}
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-19.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-19.png){: .align-center}{: width="100%" height="100%"}
 
 - 공식 스펙([https://datatracker.ietf.org/doc/html/rfc7230#section-3](https://datatracker.ietf.org/doc/html/rfc7230#section-3))
 
@@ -285,7 +285,7 @@ HTTP-message   = start-line
 
 ### 요청 메시지
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-20.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-20.png){: .align-center}{: width="100%" height="100%"}
 
 - start- line에는 request-line과 status-line이 있는데, 요청 메시지의 시작 라인은 request-line이다.
 - **request-line** = method SP(공백) request-target SP HTTP-version CRLF(앤터)
@@ -303,7 +303,7 @@ HTTP-message   = start-line
 
 ### 응답 메시지
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-21.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-21.png){: .align-center}{: width="100%" height="100%"}
 
 - start- line에는 request-line과 status-line이 있는데, 응답 메시지의 시작 라인은 **status-line**이다.
 - **status-line** = HTTP-version SP status-code SP reason-phrase CRLF
@@ -316,7 +316,7 @@ HTTP-message   = start-line
 
 ## HTTP 헤더
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-22.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-22.png){: .align-center}{: width="100%" height="100%"}
 
 - header-field = field-name**:**OWS field-value OWS
     - OWS : 띄어쓰기 허용
@@ -333,7 +333,7 @@ HTTP-message   = start-line
 
 ## HTTP 메시지 바디
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-23.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-03-23.png){: .align-center}{: width="100%" height="100%"}
 
 - HTTP 메시지 바디에는 실제 전송할 데이터가 들어있다.
 - byte로 표현할 수 있는 모든 데이터를 포함할 수 있다.
