--- a/_posts/network/http/2021-05-13-http-06.md
+++ b/_posts/network/http/2021-05-13-http-06.md
@@ -46,14 +46,14 @@ last_modified_at: '2021-05-13 22:00:00 +0800'
 
 - 클라이언트의 요청을 성공적으로 처리했다는 상태 코드
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-06-01.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-06-01.png){: .align-center}{: width="100%" height="100%"}
 
 ## 201 Created
 
 - 요청 성공해서 새로운 리소스가 생성되었다는 상태 코드
 - 생성된 리소스는 응답의 Location 헤더 필드로 식별
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-06-02.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-06-02.png){: .align-center}{: width="100%" height="100%"}
 
 ## 202 Accepted
 
@@ -88,7 +88,7 @@ last_modified_at: '2021-05-13 22:00:00 +0800'
 
 - 어떤 페이지가 있는데, 더이상 그 경로를 사용하지 않고 새로운 경로를 쓴다고 가정한다. 기존에 공유되었던 URL로 접속을 시도하면 자동으로 새로운 URL로 이동하도록 301 응답 코드를 보낸다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-06-03.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-06-03.png){: .align-center}{: width="100%" height="100%"}
 
 ### 종류
 
@@ -110,14 +110,14 @@ last_modified_at: '2021-05-13 22:00:00 +0800'
 
 - 리다이렉트시 요청 메서드가 GET으로 변하고, 본문이 제거될 수도 있다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-06-04.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-06-04.png){: .align-center}{: width="100%" height="100%"}
 
 ### 308 Permanent Redirect
 
 - 301과 기능은 동일하다.
 - 리다이렉트시 요청 메서드와 본문을 유지한다. 예를 들어, 처음에 POST를 보냈다면 리다이렉트로 POST를 유지하고 메시지가 존재할 경우 메시지도 유지한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-06-05.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-06-05.png){: .align-center}{: width="100%" height="100%"}
 
 # (4) 3xx - 리다이렉션2
 
@@ -146,7 +146,7 @@ last_modified_at: '2021-05-13 22:00:00 +0800'
 - POST로 주문 후 웹 브라우저를 새로고침 한다면?
     - 새로고침은 다시 요청하는 것이다. 따라서 회원은 중복해서 주문을 하려는 의도가 아니었지만, 중복 주문이 될 수 있다. 원칙적으로는 같은 주문 번호로 동일한 요청이 발생하면 중복 주문이 되지 않도록 서버에서 막아야 한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-06-06.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-06-06.png){: .align-center}{: width="100%" height="100%"}
 
 - POST로 주문 후 새로 고침으로 인한 중복 주문 방지하려면, POST로 주문 후에 주문 결과 화면을 GET 메서드로 리다이렉트한다.
     - 새로고침을 해도 결과 화면을 GET으로 조회한다.
@@ -155,7 +155,7 @@ last_modified_at: '2021-05-13 22:00:00 +0800'
     - URL이 이미 POST → GET으로 리다이렉트 된 상태이다.
     - 새로고침 해도 GET으로 결과 화면만 조회한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-06-07.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-06-07.png){: .align-center}{: width="100%" height="100%"}
 
 ## 302, 307, 303에 관하여
 
