--- a/_posts/java-algorithm/2021-01-20-algorithm-03.md
+++ b/_posts/java-algorithm/2021-01-20-algorithm-03.md
@@ -236,7 +236,7 @@ if (a[i] == key) // 종료 조건2
 - 오름차순으로 정렬된 배열 `a`의 데이터에서 `35`를 검색한다.
 - 검색 범위의 맨 앞 인덱스를 `pl`, 맨 끝 인덱스를 `pr`, 중앙 인덱스를 `pc`라고 지정한다. 검색을 시작할 때 `pl`은 `0`, `pr`은 `n - 1`, `pc`는 `(n - 1) / 2`로 초기화한다.
 
-![이진 검색]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/algorithm/algorithm-03-01.png){: .align-center}{: width="100%" height="100%"}
+![이진 검색]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/algorithm/algorithm-03-01.png){: .align-center}{: width="100%" height="100%"}
 
 - 오름차순으로 정렬된 데이터에서 검색을 할 때, 먼저 배열의 중앙에 위치한 `a[5]` 요소부터 검색을 시작한다. 중앙에 위치한 요소가 원하는 값인지 확인하고, 검색하려는 값보다 큰지 작은지 판단한다. 그리고 검색 대상을 앞쪽이나 뒤쪽으로 좁힌다. 또다시 두 중앙 요소를 선택하고 검색 범위를 좁혀 나간다.
 - a[pc] < key일 때
@@ -253,7 +253,7 @@ if (a[i] == key) // 종료 조건2
 - 원하는 값을 찾지 못했는데, 검색 범위가 더이상 없을 경우 검색에 실패하기도 한다.
 - 배열 `a`에서 `6`을 검색하려고 하는데, 배열 `a`의 데이터에는 `6`은 존재하지 않는다. 검색 범위를 좁혀가며 검색을 하는데, `pl`이 `pr`보다 커지면서 검색 범위를 더이상 계산할 수 없게 된다. `종료 조건 2`가 성립하므로 검색에 실패한다.
 
-![이진 검색]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/algorithm/algorithm-03-02.png){: .align-center}{: width="100%" height="100%"}
+![이진 검색]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/algorithm/algorithm-03-02.png){: .align-center}{: width="100%" height="100%"}
 - 이진 검색은 검색을 반복할 때마다 검색 범위가 절반이 되므로 검색애 필요한 비교 횟수의 평균 값은 `log n`이다. **검색에 실패한 경우**는 `log(n+1)회`(크거나 같으면거 가장 작은 정수), **검색에 성공한 경우**는 대략 `log n - 1회`이다.
 - 이진 검색 알고리즘은 검색 대상(배열)이 정렬(sort)되어 있음을 가정한다. 따라서 이 프로그램에서는 배열의 각 요소의 값을 입력하는 과정에서 바로 앞에 입력한 요소보다 작은 값인 경우에는 다시 입력하게 한다.
 
@@ -777,11 +777,11 @@ static <T> binarySearch(T[] a, Comparator<? super T> key)
 - 삽입 포인트는 검색하기 위해 지정한 `key`보다 큰 요소 중 첫 번째 요소의 인덱스이다. 만약 배열의 모든 요소가 `key`보다 작다면 배열의 길이를 삽입 포인트로 정한다.
 - 예를 들어 아래의 배열에서 `key`가 `4`이라면, `4`보다 큰 요소 중 첫 번째 요소의 인덱스가 `3`이므로, 삽입 포인트는 `3`이다. 즉 , `-4`를 반환한다.
 
-![이진 검색]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/algorithm/algorithm-03-03.png){: .align-center}{: width="100%" height="100%"}
+![이진 검색]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/algorithm/algorithm-03-03.png){: .align-center}{: width="100%" height="100%"}
 
 - 배열 `{5, 7, 15, 28, 29, 31, 39, 58, 68, 70}`에서 `binarySearch` 메서드를 검색하는 여러 경우를 나타내 보았다.
 
-![이진 검색]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/algorithm/algorithm-03-04.png){: .align-center}{: width="100%" height="100%"}
+![이진 검색]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/algorithm/algorithm-03-04.png){: .align-center}{: width="100%" height="100%"}
 
 - **39 검색** : 검색 성공, 해당 인덱스(6)를 반환한다.
 - **30 검색** : 검색 실패, 삽입 포인트는 5이고 -6을 반환한다.
