--- a/_posts/network/http/2021-05-07-http-01.md
+++ b/_posts/network/http/2021-05-07-http-01.md
@@ -176,9 +176,9 @@ last_modified_at: '2021-05-07 22:00:00 +0800'
 
 - IP를 이용하면 목적지 서버를 찾을 수 있고, 서버 안에서의 애플리케이션은 PORT로 구분한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-01-17.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-01-17.png){: .align-center}{: width="100%" height="100%"}
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-01-18.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-01-18.png){: .align-center}{: width="100%" height="100%"}
 
 ## PORT
 
@@ -186,7 +186,7 @@ last_modified_at: '2021-05-07 22:00:00 +0800'
 - 클라이언트가 게임을 하려고 한다면, `IP :200.200.200.2` 서버에 있는 `11220` 포트에 연결한다.
 - 클라이언트가 웹 브라우저에 요청을 보내고 서버에서 응답을 한다면, `IP : 100.100.100.1` 서버에 있는 `10010` 포트로 응답을 한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-01-19.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-01-19.png){: .align-center}{: width="100%" height="100%"}
 
 ### PORT 번호
 
@@ -212,4 +212,4 @@ last_modified_at: '2021-05-07 22:00:00 +0800'
 
 - DNS 서버에 도메인명과 IP주소를 등록한다. 클라이언트가 도메인명을 입력하면 DNS 서버가 그에 맞는 IP주소를 알려주고, 그 IP 주소를 가지고 서버에 접속한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-01-20.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-01-20.png){: .align-center}{: width="100%" height="100%"}
