--- a/_posts/network/http/2021-05-11-http-04.md
+++ b/_posts/network/http/2021-05-11-http-04.md
@@ -131,7 +131,7 @@ last_modified_at: '2021-05-11 22:00:00 +0800'
 
 - 서버가 응답한다. 응답 메시지에는 자원이 생성된 경로를 보내준다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-08.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-08.png){: .align-center}{: width="100%" height="100%"}
 
 ### POST의 데이터 처리
 
@@ -169,7 +169,7 @@ last_modified_at: '2021-05-11 22:00:00 +0800'
 
 ## PUT
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-09.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-09.png){: .align-center}{: width="100%" height="100%"}
 
 - 리소스를 **완전히** 대체한다.
     - 리소스가 있으면 대체한다.
@@ -184,30 +184,30 @@ last_modified_at: '2021-05-11 22:00:00 +0800'
 - 기존에 리소스가 있는 경우, PUT 요청을 하면 새로운 리소스로  대체된다.
 - young → old, 20 → 50
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-10.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-10.png){: .align-center}{: width="100%" height="100%"}
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-11.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-11.png){: .align-center}{: width="100%" height="100%"}
 
 ### 리소스가 없는 경우
 
 - 리소스가 없는 경우, PUT 요청을 하면 새로운 리소스를 생성한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-12.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-12.png){: .align-center}{: width="100%" height="100%"}
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-13.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-13.png){: .align-center}{: width="100%" height="100%"}
 
 ### PUT은 리소스를 완전히 대체한다.
 
 - PUT 요청을 하는데, 특정 데이터만 업데이트하는 것은 불가하다. PUT은 리소스를 완전히 대체하기 때문에 기존 리소스를 삭제하고 새로운 리소스로 대체한다.
 - PUT 요청을 하는데, `username` 필드는 그대로 두고, `age` 필드의 데이터만 바꾸고 싶다 하더라도 일부만 업데이트 하는 것은 불가하다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-14.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-14.png){: .align-center}{: width="100%" height="100%"}
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-15.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-15.png){: .align-center}{: width="100%" height="100%"}
 
 ## PATCH
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-16.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-16.png){: .align-center}{: width="100%" height="100%"}
 
 - 리소스를 부분 변경한다.
 - PATCH를 지원하지 않는 서버도 있다. 이런 경우에는 POST를 사용하면 된다.
@@ -216,20 +216,20 @@ last_modified_at: '2021-05-11 22:00:00 +0800'
 
 - 기존에 존재하는 리소스의 일부만을 변경하고자 한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-17.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-17.png){: .align-center}{: width="100%" height="100%"}
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-18.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-18.png){: .align-center}{: width="100%" height="100%"}
 
 ## DELETE
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-19.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-19.png){: .align-center}{: width="100%" height="100%"}
 
 - 리소스를 제거한다.
 - 어떤 리소스를 제거하겠다는 요청을 보내면, 그 리소스가 제거된다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-20.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-20.png){: .align-center}{: width="100%" height="100%"}
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-21.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-04-21.png){: .align-center}{: width="100%" height="100%"}
 
 # (4) HTTP 메서드의 속성
 
