--- a/_posts/network/http/2021-05-12-http-05.md
+++ b/_posts/network/http/2021-05-12-http-05.md
@@ -104,7 +104,7 @@ last_modified_at: '2021-05-12 22:00:00 +0800'
 - 클라이언트에서 서버로 데이터를 바로 전송해야 하는 경우가 있다.
     - 예) 안드로이드나 아이폰 애플리케이션에서는 클라이언트에서 서버로 데이터를 바로 전송해야 한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-05-07.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-05-07.png){: .align-center}{: width="100%" height="100%"}
 
 ### 정리
 
