--- a/_posts/network/http/2021-05-20-http-07.md
+++ b/_posts/network/http/2021-05-20-http-07.md
@@ -108,7 +108,7 @@ last_modified_at: '2021-05-20 22:00:00 +0800'
 
 ![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-08.png){: .align-center}{: width="100%" height="100%"}
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-09.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-09.png){: .align-center}{: width="100%" height="100%"}
 
 - 표현 데이터의 자연 언어를 표현한다.
 - 예)
@@ -121,7 +121,7 @@ last_modified_at: '2021-05-20 22:00:00 +0800'
 
 ### 표현 데이터의 길이
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-10.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-10.png){: .align-center}{: width="100%" height="100%"}
 
 - 표현 데이터의 길이는 **바이트 단위**로 표현한다.
 - Transfer-Encoding(전송 코딩)을 사용하면 Content-Length를 사용하면 안된다.
@@ -144,25 +144,25 @@ last_modified_at: '2021-05-20 22:00:00 +0800'
 
 - 한국어 브라우저에서 다중 언어를 지원하는 서버에 접속한다. 서버에서는 기본적으로 영어를 지원하기 때문에 영어로 응답한다. 클라이언트가 어떤 언어를 선호하는지 정보가 없기 때문이다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-11.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-11.png){: .align-center}{: width="100%" height="100%"}
 
 ### ****Accept-Language 적용 전
 
 - 클라이언트가 서버에 요청을 하면서, 선호하는 언어 정보를 보낸다. 서버의 기본 언어는 영어지만, 클라이언트가 원하는 언어(한국어)를 지원하기 때문에 선호 언어로 응답한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-12.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-12.png){: .align-center}{: width="100%" height="100%"}
 
 ### Accept-Language 복잡한 예시
 
 - 클라이언트가 선호하는 언어는 한국어지만, 다중 언어 지원 서버는 독일어를 기본으로 한다. 그리고 영어를 지원하는 상황이다. 클라이언트가 선호하는 언어 1가지만 명시하여 요청을 하고 서버에서 그 언어를 지원하지 않는다면, 서버는 기본 언어(독일어)로 응답한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-13.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-13.png){: .align-center}{: width="100%" height="100%"}
 
 ## 협상과 우선순위1
 
 > Quality Values(q) 값을 사용한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-14.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-14.png){: .align-center}{: width="100%" height="100%"}
 
 
 - 0~1 까지의 수를 사용하는데, 값이 클수록 우선 순위가 높다.
@@ -173,7 +173,7 @@ last_modified_at: '2021-05-20 22:00:00 +0800'
 
 - 클라이언트는 한국어를 가장 선호하지만, 그 다음으로는 영어를 선호한다. 서버는 한국어를 지원하지 않는다. 이런 상황에서 서버는 서버의 기본 언어인 독일어로 응답하지 않고, 클라이언트가 2번째로 선호하는 영어로 응답한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-15.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-15.png){: .align-center}{: width="100%" height="100%"}
 
 ```
 Accept-Language: ko-KR,ko;q=0.9,en-US;q=0.8,en;q=0.7
@@ -191,7 +191,7 @@ Accept-Language: ko-KR,ko;q=0.9,en-US;q=0.8,en;q=0.7
 
 > 구체적인 것이 우선한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-16.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-16.png){: .align-center}{: width="100%" height="100%"}
 
 ```
 Accept: text/*, text/plain, text/plain;format=flowed, */*
@@ -215,7 +215,7 @@ Accept: text/*;q=0.3, text/html;q=0.7, text/html;level=1, text/html;level=2;q=0.
 
 - `text/plain`의 경우 딱 맞는 기준이 없으므로, `text/*`에 맞춰 `0.3`이 된다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-17.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-17.png){: .align-center}{: width="100%" height="100%"}
 
 # (4) 전송 방식
 
@@ -225,7 +225,7 @@ Accept: text/*;q=0.3, text/html;q=0.7, text/html;level=1, text/html;level=2;q=0.
 
 - 컨텐트의 길이를 정확하게 알고 있을 때 사용한다. 한 번에 요청하고 한 번에 받는다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-18.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-18.png){: .align-center}{: width="100%" height="100%"}
 
 
 ## 압축 전송
@@ -234,7 +234,7 @@ Accept: text/*;q=0.3, text/html;q=0.7, text/html;level=1, text/html;level=2;q=0.
 
 - 서버에서 콘텐트를 전달할 때 압축하여 전달한다. 이때, 어떻게 압축되어 있는지 정보를 함께 전달한다. 압축 전송 방식으로 전송하면 Content-Length를 줄일 수 있다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-19.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-19.png){: .align-center}{: width="100%" height="100%"}
 
 
 ## 분할 전송
@@ -244,7 +244,7 @@ Accept: text/*;q=0.3, text/html;q=0.7, text/html;level=1, text/html;level=2;q=0.
 - `chuncked`는 덩어리로 보낸다는 의미이다. 서버에서 데이터를 분할하는데, 각 덩어리의 바이트 정보를 함께 전송한다. 클라이언트에서는 데이터가 다 도착하기를 기다리지 않고, 데이터를 받는대로 바로바로 처리한다. `/r/n`은 끝이라는 표시이다.
 - 분할 전송 방식에서는 Content-Length를 표시하면 안된다. Cotnent-Length를 예측할 수도 없다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-20.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-20.png){: .align-center}{: width="100%" height="100%"}
 
 
 ## 범위 전송
@@ -253,7 +253,7 @@ Accept: text/*;q=0.3, text/html;q=0.7, text/html;level=1, text/html;level=2;q=0.
 
 - 데이터를 전송하는데, 중간에 클라이언트와 서버의 연결이 끊겼다고 가정한다. 이런 상황에서 클라이언트는전송받지 못한 부분의 범위를 지정하여 전송을 요청할 수 있다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-21.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-21.png){: .align-center}{: width="100%" height="100%"}
 
 # (5) 일반 정보
 
@@ -326,11 +326,11 @@ Date: Tue, 18 May 2021 08:12:31 GMT
 - 하나의 서버가 여러 도메인을 처리해야 할 때, 즉 하나의 IP 주소에 여러 도메인이 적용되 있을 때 호스트를 구분하기 위해 필요하다.
 - 가가상호스트를 통해 여러 도메인을 한번에 처리할 수 있는 서버에서는 실제 애플리케이션이 여러개 구동될 수 있다. 클라이언트에서 어떤 호스트에 요청을 하는지 명시하지 않고 요청을 보낸다면, 서버 입장에서는 어떤 사이트로 요청을 보내야하는지 알 수 없다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-22.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-22.png){: .align-center}{: width="100%" height="100%"}
 
 - 요청 메시지에 Host 정보를 추가하여 요청을 보내면, 서버에서는 이를 처리할 수 있다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-23.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-23.png){: .align-center}{: width="100%" height="100%"}
 
 ## Location
 
@@ -405,20 +405,20 @@ WWW-Authenticate: Newauth realm="apps", type=1,
 
 - 웹브라우저에 클라이언트가 접속하면 `/welcome` 요청을 보내고, 서버는 이에 응답한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-24.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-24.png){: .align-center}{: width="100%" height="100%"}
 
 
 ### 로그인
 
 - 사용자가 로그인을 하면 `/login` 요청을 보내고, 서버는 이에 응답한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-25.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-25.png){: .align-center}{: width="100%" height="100%"}
 
 ### 로그인 이후 welcom 페이지 접근
 
 - 사용자는 로그인을 했기 때문에, 서버가 **'안녕하세요, 홍길동님!'**이라고 응답할 것을 기대할 것이다. 하지만 쿠키를 사용하지 않으면, 서버는 로그인 정보를 제공받지 못하기 때문에 **'안녕하세요 손님!'**이라고 응답한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-26.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-26.png){: .align-center}{: width="100%" height="100%"}
 
 ## Stateless
 
@@ -433,11 +433,11 @@ WWW-Authenticate: Newauth realm="apps", type=1,
 
 - 모든 요청에 user의 정보를 서버에 전송한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-27.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-27.png){: .align-center}{: width="100%" height="100%"}
 
 - 모든 요청과 링크에 사용자 정보를 포함한다면, 보안에도 문제도 있을 것이고 개발자는 이를 이를 고려하여 개발을 해야 한다. 또한 브라우저를 완전히 종료하고 다시 실행한다면 어떻게 할 것인지도 개발자 입장에서 부담이 된다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-28.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-28.png){: .align-center}{: width="100%" height="100%"}
 
 ## 쿠키 사용
 
@@ -445,19 +445,19 @@ WWW-Authenticate: Newauth realm="apps", type=1,
 
 - 웹브라우저에서 로그인을 하면, 서버에서 응답을 할 때 Set-Cookie 헤더에 user의 정보를 함께 담아 응답한다. 웹 브라우저 내부에는 쿠키 저장소가 있다. 그 저장소에 서버가 응답 메시지에 보낸 쿠키 정보를 저장한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-29.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-29.png){: .align-center}{: width="100%" height="100%"}
 
 ### 로그인 이후 welcome 페이지 접근
 
 - 웹브라우저는 요청을 보낼 때마다 쿠키 저장소에 있는 정보를 조회하여 Cookie 헤더에 함께 보낸다. 지저분하게 쿼리파라미터를 사용하여 URL에 user의 정보를 보내지 않아도 된다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-30.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-30.png){: .align-center}{: width="100%" height="100%"}
 
 ### 모든 요청에 쿠키 정보 자동 포함
 
 - 요청에 필요한 정보를 URL에 모두 포함할 필요가 없다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-31.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-07-31.png){: .align-center}{: width="100%" height="100%"}
 
 ## 쿠키
 
