--- a/_posts/network/http/2021-05-26-http-08.md
+++ b/_posts/network/http/2021-05-26-http-08.md
@@ -20,17 +20,17 @@ last_modified_at: '2021-05-26 22:00:00 +0800'
 
 - 웹브라우저에서 `star.jpg`를 요청한다. `star.jpg`가 차지하는 용량이 약 1.1M라 가정한다. 이에 해당하는 네트워크를 차지하며 서버에서 이미지를 내려준다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-01.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-01.png){: .align-center}{: width="100%" height="100%"}
 
 - 웹 브라우저에 `star.jpg`가 표시된다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-02.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-02.png){: .align-center}{: width="100%" height="100%"}
 
 ### 두 번째 요청
 
 - 캐시가 없을 때 같은 요청을 한 번 더 한다. 서버에서는 요청을 받아 응답을 내려주는데, 서버는 헤더와 바디를 다시 새로 만들어서 보낸다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-03.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-03.png){: .align-center}{: width="100%" height="100%"}
 
 ### 캐시가 없을 때 문제점
 
@@ -45,21 +45,21 @@ last_modified_at: '2021-05-26 22:00:00 +0800'
 
 - 웹 브라우저에서 요청을 보내면, 서버에서 `Cache-Control`이라는 헤더를 이용하여 캐시를 적용한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-04.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-04.png){: .align-center}{: width="100%" height="100%"}
 
 - 서버가 응답하면, 웹 브라우저는 응답 결과를 캐시에 저장한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-05.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-05.png){: .align-center}{: width="100%" height="100%"}
 
 ### 두 번째 요청
 
 - 요청을 보내기 전에 캐시 저장소에서 찾아보고, 캐시 유효 시간을 검증한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-06.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-06.png){: .align-center}{: width="100%" height="100%"}
 
 - 캐시가 유효하다면 네트워크 요청을 할 필요가 없다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-07.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-07.png){: .align-center}{: width="100%" height="100%"}
 
 ### 캐시 적용 후 개선점
 
@@ -72,15 +72,15 @@ last_modified_at: '2021-05-26 22:00:00 +0800'
 
 - 동일한 요청을 세 번째 했는데, 캐시 유효 시간이 초과 되었다고 가정한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-08.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-08.png){: .align-center}{: width="100%" height="100%"}
 
 - 캐시 유효시간이 초과되었다면, 다시 요청을 해야 한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-09.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-09.png){: .align-center}{: width="100%" height="100%"}
 
 - 서버의 응답 결과를 다시 캐시에 저장한다. (캐시 초기화)
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-10.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-10.png){: .align-center}{: width="100%" height="100%"}
 
 ## 캐시 시간 초과
 
@@ -98,7 +98,7 @@ last_modified_at: '2021-05-26 22:00:00 +0800'
 - 데이터를 전송하는 대신에 저장해 두었던 로컬 캐시를 재사용할 수 있다.
 - 단 클라이언트의 데이터와 서버의 데이터가 같다는 사실을 확인할 수 있는 방법이 필요하다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-11.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-11.png){: .align-center}{: width="100%" height="100%"}
 
 ## 검증 헤더 추가
 
@@ -106,33 +106,33 @@ last_modified_at: '2021-05-26 22:00:00 +0800'
 
 - 클라이언트가 star.jpg 파일을 요청하는데, 서버가 응답 메시지에 `Last-Modified` 헤더를 추가하여 데이터를 최종 수정한 날짜를 적는다. 이때 날짜는 UTC 표기법으로 적는다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-12.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-12.png){: .align-center}{: width="100%" height="100%"}
 
 - 응답 메시지를 받은 웹 브라우저는, 응답 결과를 캐시에 저장한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-13.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-13.png){: .align-center}{: width="100%" height="100%"}
 
 ### 두 번째 요청 - 캐시 시간 초과
 
 - HTTP 요청 메시지에 `if-modified-since`라는 헤더를 추가한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-14.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-14.png){: .align-center}{: width="100%" height="100%"}
 
 - 서버에서 새로운 요청을 받았는데, 클라이언트의 데이터 최종 수정일과 서버에 있는 데이터의 최종 수정일이 일치한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-15.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-15.png){: .align-center}{: width="100%" height="100%"}
 
 - 서버에서는 데이터가 아직 수정되지 않았음을 확인하고, 응답 메시지를 보낸다.
     - 상태 코드를 `304 Not Modified`로 한다.
     - HTTP Body가 없다. → 네트워크 부화가 줄어든다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-16.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-16.png){: .align-center}{: width="100%" height="100%"}
 
 - 클라이언트는 응답 결과를 재사용하고. 헤더 데이터를 갱신한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-17.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-17.png){: .align-center}{: width="100%" height="100%"}
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-18.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-18.png){: .align-center}{: width="100%" height="100%"}
 
 ## 검증 헤더와 조건부 요청 정리
 
@@ -197,35 +197,35 @@ last_modified_at: '2021-05-26 22:00:00 +0800'
 
 - 서버에서 응답 메시지를 보낼 때 `ETag`라는 헤더를 추가하여 보낸다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-19.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-19.png){: .align-center}{: width="100%" height="100%"}
 
 - 캐시에 데이터를 저장하면서, Etag 정보를 함께 저장한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-20.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-20.png){: .align-center}{: width="100%" height="100%"}
 
 ### 두 번째 요청 - 캐시 시간 초과
 
 - 웹 브라우저에서 두 번째 요청을 하는데, 캐시 유효 시간이 초과 되었다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-21.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-21.png){: .align-center}{: width="100%" height="100%"}
 
 - 웹 브라우저 캐시에 ETtag가 있다면, `if-Not-Matched` 헤더를 추가하여 서버에 요청 메시지를 보낸다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-22.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-22.png){: .align-center}{: width="100%" height="100%"}
 
 - 서버에 있는 데이터와 일치하는지 확인한다. ETag가 일치하므로 데이터가 아직 수정되지 않았다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-23.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-23.png){: .align-center}{: width="100%" height="100%"}
 
 - 응답 메시지를 보낼 때 상태 코드를 `304 Not Modified`로 한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-24.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-24.png){: .align-center}{: width="100%" height="100%"}
 
 - 캐시에 있는 데이터를 그대로 재사용하고, 헤더 데이터를 갱신한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-25.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-25.png){: .align-center}{: width="100%" height="100%"}
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-26.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-26.png){: .align-center}{: width="100%" height="100%"}
 
 ## ETag, If-None-Match 정리
 
@@ -294,7 +294,7 @@ last_modified_at: '2021-05-26 22:00:00 +0800'
 
 - 한국에 있는 클라이언트에서 미국에 있는 원 서버에 접근을 한다. 각각의 사용자들이 하나의 이미지를 다운로드 하기 위해 0.5초씩 소요된다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-27.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-27.png){: .align-center}{: width="100%" height="100%"}
 
 ## 프록시 캐시 도입
 
@@ -305,7 +305,7 @@ last_modified_at: '2021-05-26 22:00:00 +0800'
 - 첫 번째 유저가 요청할 때 원 서버에서 데이터를 다운로드 받는다. 두 번째 요청부터는 프록시 캐시 서버에 있는 데이터를 이용한다.
 - 로컬에 저장되는 캐시를 **private 캐시**라 하고, 프록시 캐시 서버에 저장되는 캐시를 **public 캐시**라 한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-28.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-28.png){: .align-center}{: width="100%" height="100%"}
 
 ## Cache-Control
 
@@ -352,15 +352,15 @@ last_modified_at: '2021-05-26 22:00:00 +0800'
 
 - 프록시 캐시에서 `no-cache` 요청을 받으면, 원서버에 요청을 한다. 원 서버가 이를 검증한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-29.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-29.png){: .align-center}{: width="100%" height="100%"}
 
 - 일시적으로 원 서버에 접근이 불가한 상황이라 가정한다. 이런 경우 캐시 서버 설정에 따라 캐시 데이터를 반환할 수 있다. 오류보다는 오래된 데이터라도 보여주는게 낫다면, `200 OK`를 반환하도록 설정한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-30.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-30.png){: .align-center}{: width="100%" height="100%"}
 
 ### must-revalidate
 
 - 원 서버에 접근할 수 없는 경우 항상 오류가 발생해야 한다.
 
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-31.png){: .align-center}{: width="100%" height="100%"}
+![http]({{ https://jiyoun-yoo.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-08-31.png){: .align-center}{: width="100%" height="100%"}
 
